--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.2 部署 Doris Operator.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.2 部署 Doris Operator.md
@@ -65,7 +65,7 @@ deployment.apps/doris-operator created
 
 在 `operator.yaml` 文件中规范了部署 `operator` 的服务的最低要求。为了适配复杂的生产环境，可以下载 `operator.yaml` 文件后，按照期望更新其中配置。
 
-**在线安装 Doris Operator**
+#### 2.2.1 在线安装 Doris Operator
 
 在修改 `operator.yaml` 文件后，可以使用以下命令部署 `Doris Operator` 服务：
 
@@ -85,7 +85,7 @@ serviceaccount/doris-operator created
 deployment.apps/doris-operator created
 ```
 
-**离线安装 Doris Operator**
+#### 2.2.2 离线安装 Doris Operator
 
 1. 下载 `operator` 运行所需镜像文件
 
@@ -157,7 +157,7 @@ deployment.apps/doris-operator created
 
 `Helm Chart` 是一系列描述 `Kubernetes` 相关资源的 `YAML` 文件的封装。通过 `Helm` 部署应用时，你可以自定义应用的元数据，以便于分发应用。 `Chart` 是 `Helm` 的软件包，采用 `TAR` 格式，用于部署 `Kubernetes` 原生应用程序。通过 `Helm Chart` 可以简化部署 `Doris` 集群的流程。
 
-**在线添加仓库**
+#### 2.3.1 在线添加仓库
 
 1. 添加部署仓库
 
@@ -200,7 +200,7 @@ deployment.apps/doris-operator created
     doris-operator-866bd449bb-zl5mr   1/1     Running   0          18m
     ```
 
-**离线添加仓库**
+#### 2.3.2 离线添加仓库
 
 如果服务器无法连接外网，需要预先下载 `Doris Operator` 与 `Doris Cluster` 的 `chart` 资源。
 
