--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.3 配置 Doris 集群.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.3 配置 Doris 集群.md
@@ -8,7 +8,7 @@
 
 `Doris Operator` 与 `Doris` 版本相互解耦， `Doris Operator` 如果不明确说明，本质上可以部署任何版本的 `Doris` 。
 
-**FE Image 设置**
+#### 1.1.1 FE Image 设置
 
 重新指定 `FE` 的 `image` 配置如下：
 
@@ -20,7 +20,7 @@ spec:
 
 将 `${image}` 替换想要部署的 `image` 名称后，将配置更新到需要部署的 `DorisCluster` 资源中。
 
-**BE Image 设置**
+#### 1.1.2 BE Image 设置
 
 重新指定 `BE` 的 `image` 配置如下：
 
@@ -34,7 +34,7 @@ spec:
 
 ### 1.2 副本数设定
 
-**FE 副本数修改**
+#### 1.2.1 FE 副本数修改
 
 将默认的 `FE` 副本数 `3` 改为 `5` 配置如下：
 
@@ -46,7 +46,7 @@ spec:
 
 将配置更新到需要部署的 `DorisCluster` 资源中。
 
-**BE 副本数修改**
+#### 1.2.2 BE 副本数修改
 
 将默认的 `BE` 副本数 `3` 改为 `5` 配置如下：
 
@@ -60,7 +60,7 @@ spec:
 
 ### 1.3 计算资源设定
 
-**FE 计算资源设定**
+#### 1.3.1 FE 计算资源设定
 
 默认部署的 `FE` 计算资源为 `6c` `12Gi` ，将计算资源修改为 `8c` `16Gi` 配置如下：
 
@@ -77,7 +77,7 @@ spec:
 
 将配置更新到需要部署的 `DorisCluster` 资源中。
 
-**BE 计算资源设定**
+#### 1.3.2 BE 计算资源设定
 
 默认部署的 `BE` 计算资源为 `8c` `16Gi` ，将计算资源修改为 `16c` `32Gi` 配置如下：
 
@@ -237,7 +237,7 @@ spec:
 
 `Doris Operator` 除提供配置文件挂载之外，也提供挂载多 `ConfigMap` 到容器中不同目录的能力。
 
-**FE 挂载多 ConfigMap**
+#### 2.3.1 FE 挂载多 ConfigMap
 
 以下为将名称为 `test-fe1` ， `test-fe2` 的 `ConfigMap` 分别挂载到 `FE` 容器 `/etc/fe/config1/` 和 `/etc/fe/config2` 目录下的配置样例：
 
@@ -251,7 +251,7 @@ spec:
       mountPath: /etc/fe/config2
 ```
 
-**BE 挂载多 ConfigMap**
+#### 2.3.2 BE 挂载多 ConfigMap
 
 以下为将名称为 `test-be1` ， `test-be2` 的 `ConfigMap` 分别挂载到 `BE` 容器 `/etc/be/config1/` 和 `/etc/be/config2` 目录下的配置样例：
 
@@ -296,7 +296,7 @@ spec:
 
 上述配置中， `${your_storageclass}` 表示希望使用的 `StorageClass` 名称， `${storageSize}` 表示希望使用的存储大小， `${storageSize}` 的格式遵循 `K8s` 的 `quantity` 表达方式，比如： `100Gi` 。请在使用时按需替换。
 
-**FE 日志持久化配置**
+#### 3.2.1 FE 日志持久化配置
 
 使用默认配置文件时，将如下配置添加到需要部署的 `DorisCluster` 资源中：
 
@@ -327,7 +327,7 @@ spec:
 
 在 `Doris` 在 `K8s` 部署中，默认情况下建议持久化 `/opt/apache-doris/be/storage` 挂载点，此为 `BE` 节点默认存储真实数据的路径。 `Doris` 在 `K8s` 上部署，默认将所有的日志信息输出到 `console` 。如果集群有日志收集能力可直接通过 `console` 收集，如果集群缺少日志收集系统，默认情况下建议持久化 `/opt/apache-doris/be/log` 挂载点。
 
-**BE 配置数据持久化**
+#### 3.3.1 BE 配置数据持久化
 
 * `BE` 配置默认持久化存储路径
 
@@ -378,7 +378,7 @@ spec:
 
     上述配置中， `${your_storageclass}` 表示希望使用的 `StorageClass` 名称， `${storageSize}` 表示希望使用的存储大小， `${storageSize}` 的格式遵循 `K8s` 的 `quantity` 表达方式，比如： `100Gi` 。请在使用时按需替换。
 
-**BE 持久化日志**
+#### 3.3.2 BE 持久化日志
 
 使用默认配置文件时，将如下配置添加到需要部署的 `DorisCluster` 资源中：
 
@@ -748,7 +748,7 @@ beSpec:
         password: ${DB_ADMIN_PASSWD}
         ```
 
-        其中 `${DB_ADMIN_USER}` 为新创建的用户名， `${DB_ADMIN_PASSWD}` 为新建用户名设置的密码。将 Secret 通过 `kubectl -n ${namespace} apply -f ${secretFileName}.yaml` 将更新后的 `Secret` 部署到 `K8s` 集群中。其中 `${namespace}` 为 `DorisCluster` 资源需要部署的命名空间， `${secretFileName}` 为需要部署的 `Secret` 的文件名称。
+        其中 `${DB_ADMIN_USER}` 为新创建的用户名， `${DB_ADMIN_PASSWD}` 为新建用户名设置的密码。将 `Secret` 通过 `kubectl -n ${namespace} apply -f ${secretFileName}.yaml` 将更新后的 `Secret` 部署到 `K8s` 集群中。其中 `${namespace}` 为 `DorisCluster` 资源需要部署的命名空间， `${secretFileName}` 为需要部署的 `Secret` 的文件名称。
   
     * 配置需要使用 `Secret` 的 `DorisCluster` 资源
 
