--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.4 集群运维.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.4 集群运维.md
@@ -62,7 +62,7 @@ doriscluster-sample   available   available
 
 `K8s` 所有运维操作通过修改资源为最终状态，由 `Operator` 服务自动完成运维。扩缩容操作可通过 `kubectl --namespace {namespace} edit doriscluster {dcr_name}` 直接进入编辑模式修改对应 `spec` 的 `replicas` 值，保存退出后 `Doris Operator` 完成运维，也可以通过如下命令实现不同组件的扩缩容。
 
-**FE 扩容**
+#### 2.2.1 FE 扩容
 
 1. 查看当前 `FE` 服务数量
 
@@ -88,7 +88,7 @@ doriscluster-sample   available   available
     doriscluster-sample-fe-0   1/1     Running   0          8m49s
     ```
 
-**BE 扩容**
+#### 2.2.2 BE 扩容
 
 1. 查看当前 `BE` 服务数量
 
@@ -116,7 +116,7 @@ doriscluster-sample   available   available
 
 ### 2.3 节点缩容
 
-关于节点缩容问题， `Doris-Operator` 目前并不能很好的支持节点安全下线，在这里仍能够通过减少集群组件的 `replicas` 属性来实现减少 `FE` 或 `BE` 的目的，这里是直接 `stop` 节点来实现节点下线，当前版本的 `Doris-Operator` 并未能实现 decommission 安全转移副本后下线。由此可能引发一些问题及其注意事项如下
+关于节点缩容问题， `Doris-Operator` 目前并不能很好的支持节点安全下线，在这里仍能够通过减少集群组件的 `replicas` 属性来实现减少 `FE` 或 `BE` 的目的，这里是直接 `stop` 节点来实现节点下线，当前版本的 `Doris-Operator` 并未能实现 `decommission` 安全转移副本后下线。由此可能引发一些问题及其注意事项如下
 
 * 表存在单副本情况下贸然下线 `BE` 节点，一定会有数据丢失，尽可能避免此操作。
 
@@ -160,7 +160,7 @@ doriscluster-sample   available   available
 
 建议依次修改对应集群组件的 `image` 然后应用该配置，待当前类型的组件完全升级成功状态恢复正常后，再进行下一个类型节点的滚动升级。
 
-**升级 BE**
+#### 3.2.1 升级 BE
 
 如果保留了集群的 `crd` （ `Doris Operator` 定义了 `DorisCluster` 类型资源名称的简写）文件，则可以通过修改该配置文件并且 `kubectl apply` 的命令来进行升级。
 
@@ -204,7 +204,7 @@ doriscluster-sample   available   available
 
 当所有 `Pod` 都重建完毕进入 `Running` 状态后，升级完成。
 
-**升级 FE**
+#### 3.2.2 升级 FE
 
 如果保留了集群的 `crd` （ `Doris-Operator` 定义了 `DorisCluster` 类型资源名称的简写）文件，则可以通过修改该配置文件并且 `kubectl apply` 的命令来进行升级。
 
@@ -242,7 +242,7 @@ doriscluster-sample   available   available
 
 ### 3.3 升级完成处理
 
-**验证集群节点状态**
+#### 3.3.1 验证集群节点状态
 
 通过访问 `Doris` 集群文档提供的方式，通过 `mysql-client` 访问 `Doris` 。使用 `show frontends` 和 `show backends` 等 `SQL` 查看各个组件的版本和状态。
 
@@ -398,7 +398,7 @@ HeartbeatFailureCounter: 0
 
 若 `BE` 节点 `alive` 状态为 `true` ，且 `Version` 值为新版本，则该 `BE` 节点升级成功
 
-**恢复集群副本同步和均衡**
+#### 3.3.2 恢复集群副本同步和均衡
 
 在确认各个节点状态无误后，执行以下 `SQL` 恢复集群均衡和副本修复：
 
