--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.2 部署 FoundationDB.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.2 部署 FoundationDB.md
@@ -1,6 +1,6 @@
 # 1.2.3.3.2 部署 FoundationDB
 
-`FDB` 是 `Apple` 公司开发的分布式强一致性存储结构化数据的数据库。 `Doris` 存算分离模式使用 `FDB` 作为元数据存储，通过 `meta-service` 组件来管理 `FDB` 中的元数据。 `Kubernetes` 上部署存算分离集群需要提前部署 `FDB` 服务，推荐两种部署方式：在虚机（包括物理机）上直接部署；使用 `fdb-kubernetes-operator` 部署 `FDB` 。虚机部署请参考 Doris 存算分离官方文档部署前准备部分搭建 `FDB` 集群。部署前请确保 `FDB` 有被 `Doris` 部署的 `Kubernetes` 集群访问的能力，即 `Kubernetes` 的 `Node` 与 `FDB` 部署的机器在同一个子网。 `FDB` 官方提供 `Kubernetes` 上部署运维管理服务 `fdb-kubernetes-operator` 。
+`FDB` 是 `Apple` 公司开发的分布式强一致性存储结构化数据的数据库。 `Doris` 存算分离模式使用 `FDB` 作为元数据存储，通过 `meta-service` 组件来管理 `FDB` 中的元数据。 `Kubernetes` 上部署存算分离集群需要提前部署 `FDB` 服务，推荐两种部署方式：在虚机（包括物理机）上直接部署；使用 `fdb-kubernetes-operator` 部署 `FDB` 。虚机部署请参考 `Doris` 存算分离官方文档部署前准备部分搭建 `FDB` 集群。部署前请确保 `FDB` 有被 `Doris` 部署的 `Kubernetes` 集群访问的能力，即 `Kubernetes` 的 `Node` 与 `FDB` 部署的机器在同一个子网。 `FDB` 官方提供 `Kubernetes` 上部署运维管理服务 `fdb-kubernetes-operator` 。
 
 以下简述使用 `fdb-kubernetes-operator` 最新版本部署 `FDB` 使用样例。
 
