--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.5 配置部署计算组.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.5 配置部署计算组.md
@@ -76,7 +76,7 @@ spec:
 
 ### 4.2 设置服务储存配置
 
-BE 在存算分离模式下必须指定 `Cache` 配置，请按照存算分离文档的 `file_cache_path` 相关介绍配置 `Cache` 存储。服务在部署时， `Doris-Operator` 会自动根据持久化相关配置模板挂载持久化存储。
+`BE` 在存算分离模式下必须指定 `Cache` 配置，请按照存算分离文档的 `file_cache_path` 相关介绍配置 `Cache` 存储。服务在部署时， `Doris-Operator` 会自动根据持久化相关配置模板挂载持久化存储。
 
 比如： `file_cache_path` 配置为 `file_cache_path = [{"path":"/opt/apache-doris/be/file_cache","total_size":107374182400,"query_limit":107374182400}]` ， `Doris-Operator` 相关服务自动为计算服务添加存储配置信息，这些信息能够申请到挂载点为 `/opt/apache-doris/be/file_cache` 且容量为 `100Gi` 的磁盘。
 
