--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.4 Doris on AWS.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.4 Doris on AWS.md
@@ -70,7 +70,7 @@
 
     * `Meta data dir` ： `FE` 节点的元数据目录，可以采用默认值
 
-    * `Sys log level` ：设置系统日志的等级，可以使用默认的 info
+    * `Sys log level` ：设置系统日志的等级，可以使用默认的 `info`
 
     * `Volume type of Be nodes` ： `BE` 节点挂载 `EBS` 的 `volume type` ，每台节点默认挂载一块磁盘。可以使用默认值
 
