--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/2 数据库连接/2.2 基于 Arrow Flight SQL 的高速数据传输链路.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/2 数据库连接/2.2 基于 Arrow Flight SQL 的高速数据传输链路.md
@@ -257,7 +257,7 @@ cursor.close()
 
 `Arrow Flight SQL` 协议的开源 `JDBC` 驱动兼容标准的 `JDBC API` ，可用于大多数 `BI` 工具通过 `JDBC` 访问 `Doris` ，并支持高速传输 `Apache Arrow` 数据。使用方法与通过 `MySQL` 协议的 `JDBC` 驱动连接 `Doris` 类似，只需将链接 `URL` 中的 `jdbc:mysql` 协议换成 `jdbc:arrow-flight-sql` 协议，查询返回的结果依然是 `JDBC` 的 `ResultSet` 数据结构。
 
-**POM dependency**：
+### 3.1 POM dependency
 
 ```xml
 <properties>
@@ -317,7 +317,7 @@ conn.close();
 
 除了使用 `JDBC` ，与 `Python` 类似， `Java` 也可以创建 `Driver` 读取 `Doris` 并返回 `Arrow` 格式的数据，下面分别是使用 `AdbcDriver` 和 `JdbcDriver` 连接 `Doris Arrow Flight Server` 。
 
-**POM dependency**：
+### 4.1 POM dependency
 
 ```xml
 <properties>
