--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.3 表索引/3.3.3 倒排索引.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.3 表索引/3.3.3 倒排索引.md
@@ -299,9 +299,9 @@ SELECT * FROM table_name WHERE op_type IN ('add', 'delete');
 
 ### 3.5 分词函数
 
-如果想检查分词实际效果或者对一段文本进行分词行为，可以使用 TOKENIZE 函数进行验证。
+如果想检查分词实际效果或者对一段文本进行分词行为，可以使用 `TOKENIZE` 函数进行验证。
 
-TOKENIZE 函数的第一个参数是待分词的文本，第二个参数是创建索引指定的分词参数。
+`TOKENIZE` 函数的第一个参数是待分词的文本，第二个参数是创建索引指定的分词参数。
 
 ```sql
 mysql> SELECT TOKENIZE('武汉长江大桥','"parser"="chinese","parser_mode"="fine_grained"');
