--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.7 数据划分/3.7.6 自动分桶.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.7 数据划分/3.7.6 自动分桶.md
@@ -39,7 +39,7 @@ properties("estimate_partition_size" = "2G")
     [1GB, )，则每 GB 一个分桶
     ```
 
-2. 根据 `BE` 节点数以及每个 `BE` 节点的磁盘容量，计算出桶数 M。
+2. 根据 `BE` 节点数以及每个 `BE` 节点的磁盘容量，计算出桶数 `M` 。
 
     ```sql
     其中每个 BE 节点算 1，每 50G 的磁盘容量算 1，
