--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.2 导入方式/4.1.2.2 Broker Load.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.2 导入方式/4.1.2.2 Broker Load.md
@@ -567,7 +567,7 @@ WITH BROKER "broker_name"
 );
 ```
 
-**名称**
+#### 8.1.1 名称
 
 通常用户需要通过操作命令中的 `WITH BROKER "broker_name"` 子句来指定一个已经存在的 `Broker Name` 。 `Broker Name` 是用户在通过 `ALTER SYSTEM ADD BROKER` 命令添加 `Broker` 进程时指定的一个名称。一个名称通常对应一个或多个 `Broker` 进程。 `Doris` 会根据名称选择可用的 `Broker` 进程。用户可以通过 `SHOW BROKER` 命令查看当前集群中已经存在的 `Broker` 。
 
@@ -575,7 +575,7 @@ WITH BROKER "broker_name"
 
     `Broker Name` 只是一个用户自定义名称，不代表 `Broker` 的类型。
 
-**认证信息**
+#### 8.1.2 认证信息
 
 不同的 `Broker` 类型，以及不同的访问方式需要提供不同的认证信息。认证信息通常在 `WITH BROKER "broker_name"` 之后的 `Property Map` 中以 `Key-Value` 的方式提供。
 
