--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.2 导入方式/4.1.2.5 MySQL Load.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.2 导入方式/4.1.2.5 MySQL Load.md
@@ -122,7 +122,7 @@ show load warnings where label='b612907c-ccf4-4ac2-82fe-107ece655f0f';
 
 ### 4.1 导入语法
 
-LOAD DATA 语法如下：
+`LOAD DATA` 语法如下：
 
 ```sql
 LOAD DATA LOCAL
