--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.2 数据更新/4.2.3 主键模型的导入更新.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.2 数据更新/4.2.3 主键模型的导入更新.md
@@ -66,7 +66,7 @@ partial_columns:true
 set enable_unique_key_partial_update=true
 ```
 
-需要注意的是，控制 `insert` 语句是否开启严格模式的会话变量 `enable_insert_strict` 的默认值为 `true` ，即 `insert` 语句默认开启严格模式，而在严格模式下进行部分列更新不允许更新不存在的 `key` 。所以，在使用 insert 语句进行部分列更新的时候如果希望能插入不存在的 `key` ，需要在 `enable_unique_key_partial_update` 设置为 `true` 的基础上同时将 `enable_insert_strict` 设置为 `false` 。
+需要注意的是，控制 `insert` 语句是否开启严格模式的会话变量 `enable_insert_strict` 的默认值为 `true` ，即 `insert` 语句默认开启严格模式，而在严格模式下进行部分列更新不允许更新不存在的 `key` 。所以，在使用 `insert` 语句进行部分列更新的时候如果希望能插入不存在的 `key` ，需要在 `enable_unique_key_partial_update` 设置为 `true` 的基础上同时将 `enable_insert_strict` 设置为 `false` 。
 
 ### 2.3 示例
 
