--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.2 数据更新/4.2.5 主键模型的更新事务.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.2 数据更新/4.2.5 主键模型的更新事务.md
@@ -206,7 +206,7 @@
     +---------+------------+----------+-------------+---------+
     ```
 
-    在这次导入中，因 `sequence column` 的值（也就是 `modify_date` 中的值）中 `'2020-03-05'` 为最大值，所以 `keyword` 列中最终保留了 c。
+    在这次导入中，因 `sequence column` 的值（也就是 `modify_date` 中的值）中 `'2020-03-05'` 为最大值，所以 `keyword` 列中最终保留了 `c` 。
 
 3. 替换顺序的保证
 
@@ -248,7 +248,7 @@
     +---------+------------+----------+-------------+---------+
     ```
 
-    此时就可以替换表中原有的数据。综上，在导入过程中，会比较所有批次的 sequence 列值，选择值最大的记录导入 Doris 表中。
+    此时就可以替换表中原有的数据。综上，在导入过程中，会比较所有批次的 `sequence` 列值，选择值最大的记录导入 `Doris` 表中。
 
 ### 2.5 注意
 
