--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.3 数据删除/4.3.2 批量删除.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.3 数据删除/4.3.2 批量删除.md
@@ -2,13 +2,13 @@
 
 有了 `Delete` 操作为什么还要引入基于导入的批量删除？
 
-**Delete 操作的局限性**
+* `Delete` 操作的局限性
 
-使用 `Delete` 语句的方式删除时，每执行一次 `Delete` 都会生成一个空的 `rowset` 来记录删除条件，并产生一个新的数据版本。每次读取都要对删除条件进行过滤，如果频繁删除或者删除条件过多时，都会严重影响查询性能。
+    使用 `Delete` 语句的方式删除时，每执行一次 `Delete` 都会生成一个空的 `rowset` 来记录删除条件，并产生一个新的数据版本。每次读取都要对删除条件进行过滤，如果频繁删除或者删除条件过多时，都会严重影响查询性能。
 
-**Insert 数据和 Delete 数据穿插出现**
+* `Insert` 数据和 `Delete` 数据穿插出现
 
-对于类似于从事务数据库中，通过 `CDC` 进行数据导入的场景，数据中 `Insert` 和 `Delete` 一般是穿插出现的，面对这种场景当前 `Delete` 操作也是无法实现。
+    对于类似于从事务数据库中，通过 `CDC` 进行数据导入的场景，数据中 `Insert` 和 `Delete` 一般是穿插出现的，面对这种场景当前 `Delete` 操作也是无法实现。
 
 导入数据时有几种合并方式：
 
@@ -112,7 +112,7 @@ CREATE ROUTINE LOAD example_db.test1 ON example_tbl
 
 2. `DELETE ON` 条件只能与 `MERGE` 一起使用。
 
-如果在执行导入作业前按上文所述开启了 `SET show_hidden_columns = true` 的 session variable 来查看表是否支持批量删除，按示例完成 `DELETE/MERGE` 的导入作业后，如果在同一个 `session` 中执行 `select count(*) from xxx` 等语句时，需要执行 `SET show_hidden_columns = false` 或者开启新的 `session` ，避免查询结果中包含那些被批量删除的记录，导致结果与预期不符。
+如果在执行导入作业前按上文所述开启了 `SET show_hidden_columns = true` 的 `session variable` 来查看表是否支持批量删除，按示例完成 `DELETE/MERGE` 的导入作业后，如果在同一个 `session` 中执行 `select count(*) from xxx` 等语句时，需要执行 `SET show_hidden_columns = false` 或者开启新的 `session` ，避免查询结果中包含那些被批量删除的记录，导致结果与预期不符。
 
 ## 3 使用示例
 
