--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.3 数据删除/4.3.5 临时分区.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.3 数据删除/4.3.5 临时分区.md
@@ -212,7 +212,7 @@ WHERE ...;
 
 ## 6 和其他操作的关系
 
-**DROP**
+### 6.1 DROP
 
 * 使用 `Drop` 操作直接删除数据库或表后，可以通过 `Recover` 命令恢复数据库或表（限定时间内），但临时分区不会被恢复。
 
@@ -220,7 +220,7 @@ WHERE ...;
 
 * 使用 `Alter` 命令删除临时分区后，无法通过 `Recover` 命令恢复临时分区。
 
-**TRUNCATE**
+### 6.2 TRUNCATE
 
 * 使用 `Truncate` 命令清空表，表的临时分区会被删除，且不可恢复。
 
@@ -228,7 +228,7 @@ WHERE ...;
 
 * 不可使用 `Truncate` 命令清空临时分区。
 
-**ALTER**
+### 6.3 ALTER
 
 * 当表存在临时分区时，无法使用 `Alter` 命令对表进行 `Schema Change` 、 `Rollup` 等变更操作。
 
