--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/5 数据查询/5.2 连接（JOIN）.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/5 数据查询/5.2 连接（JOIN）.md
@@ -8,7 +8,7 @@
 
 * `INNER JOIN` （内连接）：对左表每一行和右表所有行进行 `JOIN` 条件比较，返回两个表中满足 `JOIN` 条件的匹配行。详细信息请参考 `SELECT` 中有关于联接查询的语法定义
 
-* `LEFT JOIN` （左连接）：在 `INNER JOIN` 的结果集基础上。如果左表的行在右表中没有匹配，则返回左表的所有行，同时右表对应的列显示为 NULL。
+* `LEFT JOIN` （左连接）：在 `INNER JOIN` 的结果集基础上。如果左表的行在右表中没有匹配，则返回左表的所有行，同时右表对应的列显示为 `NULL` 。
 
 * `RIGHT JOIN` （右连接）：与 `LEFT JOIN` 相反，如果右表的行在左表中没有匹配，则返回右表的所有行，同时左表对应的列显示为 `NULL` 。
 
