--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/5 数据查询/5.4 聚合多维分析.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/5 数据查询/5.4 聚合多维分析.md
@@ -18,7 +18,7 @@
 
 ### 1.2 语法和示例
 
-ROLLUP 的语法如下：
+`ROLLUP` 的语法如下：
 
 ```sql
 SELECT … GROUP BY ROLLUP(grouping_column_reference_list)
@@ -71,7 +71,7 @@ ORDER BY
 
 ### 2.2 语法和示例
 
-CUBE 的语法如下：
+`CUBE` 的语法如下：
 
 ```sql
 SELECT … GROUP BY CUBE(grouping_column_reference_list)
@@ -473,7 +473,7 @@ ORDER BY YEAR(d_date), i_category, ca_state;
         SELECT k1, k2, SUM(k3) FROM t GROUP BY GROUPING SETS ((k1, k2), (k1), (k2), ());
         ```
 
-        其查询结果等价于使用 UNION ALL 连接的多个 GROUP BY 查询：
+        其查询结果等价于使用 `UNION ALL` 连接的多个 `GROUP BY` 查询：
 
         ```sql
         SELECT k1, k2, SUM(k3) FROM t GROUP BY k1, k2  
