--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/6 查询加速/6.1 物化视图/6.1.2 同步物化视图.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/6 查询加速/6.1 物化视图/6.1.2 同步物化视图.md
@@ -416,7 +416,7 @@ group by
 
 ### 5.2 示例二：匹配不同前缀索引
 
-**业务场景：匹配前缀索引**
+#### 5.2.1 业务场景：匹配前缀索引
 
 用户的原始表包含三列（k1, k2, k3），其中 k1 和 k2 被设置为前缀索引列。当用户查询条件中包含 `where k1=1 and k2=2` 时，查询可以通过索引进行加速。然而，在某些情况下，用户的过滤条件可能无法匹配到前缀索引，例如 `where k3=3` ，此时无法通过索引来提升查询速度。为了解决这个问题，我们可以创建一个以 k3 作为第一列的物化视图。
 
