--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/6 查询加速/6.8 查询调优原理与实践/6.8.5 Hint.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/6 查询加速/6.8 查询调优原理与实践/6.8.5 Hint.md
@@ -556,7 +556,7 @@ mysql> explain shape plan select /*+ ORDERED*/ t1.c1 from t2 join t1 on t1.c1 = 
 18 rows in set (0.02 sec)
 ```
 
-**与 LeadingHint 的关系**
+### 3.1 与 LeadingHint 的关系
 
 当 OrderedHint 和 LeadingHint 同时使用时，OrderedHint 将优先于 LeadingHint。这意味着，即使指定了 LeadingHint，如果同时存在 OrderedHint，查询计划将按照 OrderedHint 的规则来执行，而 LeadingHint 将被忽略。
 
