--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.4 数据库分析/7.4.1 JDBC Catalog.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.4 数据库分析/7.4.1 JDBC Catalog.md
@@ -67,7 +67,7 @@ Doris JDBC Catalog 支持连接以下数据库：
 
 3. Http 地址。如：<http://repo1.maven.org/maven2/com/mysql/mysql-connector-j/8.3.0/mysql-connector-j-8.3.0.jar> 系统会从这个 Http 地址下载 Driver 文件。仅支持无认证的 Http 服务。
 
-**驱动包安全性**
+#### 3.1.1 驱动包安全性
 
 为了防止在创建 Catalog 时使用了未允许路径的 Driver Jar 包，Doris 会对 Jar 包进行路径管理和校验和检查。
 
