--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.5 分析 S3、HDFS 上的文件.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/7 湖仓一体/7.5 分析 S3、HDFS 上的文件.md
@@ -58,7 +58,7 @@ s3(
 
 目前支持对 Parquet、ORC、CSV、JSON 格式进行分析和列类型推断。
 
-**CSV Schema**
+### 1.1 CSV Schema
 
 在默认情况下，对 CSV 格式文件，所有列类型均为 String。可以通过 `csv_schema` 属性单独指定列名和列类型。Doris 会使用指定的列类型进行文件读取。格式如下：
 
