--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/8 存算分离/8.2 Doris 存算分离模式部署准备.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/8 存算分离/8.2 Doris 存算分离模式部署准备.md
@@ -60,7 +60,7 @@ Doris 存算分离架构包含三个主要模块：
 
 #### 5.1.2 fdb_vars.sh 配置
 
-**必需的自定义设置**
+##### 5.1.2.1 必需的自定义设置
 
 | 参数 | 描述 | 类型 | 示例 | 注意事项 |
 | -- | -- | -- | -- | -- |
@@ -70,7 +70,7 @@ Doris 存算分离架构包含三个主要模块：
 | FDB_CLUSTER_ID | 定义集群 ID | 字符串 | SAQESzbh | - 每个集群的 ID 必须唯一<br>- 可使用 mktemp -u XXXXXXXX 生成 |
 | FDB_CLUSTER_DESC | 定义 FDB 集群的描述 | 字符串 | dorisfdb | - 建议更改为对部署有意义的内容 |
 
-**可选的自定义设置**
+##### 5.1.2.2 可选的自定义设置
 
 | 参数 | 描述 | 类型 | 示例 | 注意事项 |
 | -- | -- | -- | -- | -- |
