--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/8 存算分离/8.3 编译部署.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/8 存算分离/8.3 编译部署.md
@@ -61,20 +61,20 @@ cat /etc/foundationdb/fdb.cluster
 cloud_ssb:A83c8Y1S3ZbqHLL4P4HHNTTw0A83CuHj@127.0.0.1:4500
 ```
 
-3.2 启动与停止
+### 3.2 启动与停止
 
-**环境要求**
+#### 3.2.1 环境要求
 
 确保已正确设置 `JAVA_HOME` 环境变量，指向 OpenJDK 17，进入 `ms` 目录。
 
-**启动命令**
+#### 3.2.2 启动命令
 
 ```shell
 export JAVA_HOME=${path_to_jdk_17}
 bin/start.sh --daemon
 ```
 
-**停止命令**
+#### 3.2.3 停止命令
 
 ```shell
 bin/stop.sh
@@ -92,7 +92,7 @@ bin/stop.sh
 
     Meta Service 本身具备了元数据管理和回收功能，这两个功能可以独立部署，如果你想独立部署，可以参考这一节。
 
-**准备工作**
+### 4.1 准备工作
 
 1. 创建新的工作目录（如 recycler）。
 
@@ -102,18 +102,18 @@ bin/stop.sh
     cp -r ms recycler
     ```
 
-**配置**
+### 4.2 配置
 
 在新目录的配置文件中修改 BRPC 监听端口 `brpc_listen_port` 和 `fdb_cluster` 的值。
 
-**启动数据回收功能**
+### 4.3 启动数据回收功能
 
 ```shell
 export JAVA_HOME=${path_to_jdk_17}
 bin/start.sh --recycler --daemon
 ```
 
-**启动仅元数据操作功能**
+### 4.4 启动仅元数据操作功能
 
 ```shell
 export JAVA_HOME=${path_to_jdk_17}
