--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.1 手动部署.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.1 手动部署.md
@@ -26,7 +26,7 @@
 
 ### 1.1 硬件检查
 
-**CPU**
+#### 1.1.1 CPU
 
 当安装 `Doris` 时，建议选择支持 `AVX2` 指令集的机器，以利用 `AVX2` 的向量化能力实现查询向量化加速。
 
@@ -38,11 +38,11 @@ cat /proc/cpuinfo | grep avx2
 
 如果机器不支持 `AVX2` 指令集，可以使用 `no AVX2` 的 `Doris` 安装包进行部署。
 
-**内存**
+#### 1.1.2 内存
 
 `Doris` 没有强制的内存限制。一般在生产环境中，建议内存至少是 `CPU` 核数的 `4` 倍（例如， `16` 核机器至少配置 `64G` 内存）。在内存是 `CPU` 核数 `8` 倍时，会得到更好的性能。
 
-**存储**
+#### 1.1.3 存储
 
 `Doris` 部署时数据可以存放在 `SSD` 或 `HDD` 硬盘或者对象存储中。
 
@@ -52,11 +52,11 @@ cat /proc/cpuinfo | grep avx2
 
 * 大规模数据量下的高频数据更新场景
 
-**文件系统**
+#### 1.1.4 文件系统
 
 `ext4` 和 `xfs` 文件系统均支持。
 
-**网卡**
+#### 1.1.5 网卡
 
 `Doris` 在进行计算过程涉及将数据分片分发到不同的实例上进行并行处理，会导致一定的网络资源开销。为了最大程度优化 `Doris` 性能并降低网络资源开销，强烈建议在部署时选用万兆网卡（ `10 Gigabit Ethernet` ，即 `10GbE` ）或者更快网络。
 
@@ -64,7 +64,7 @@ cat /proc/cpuinfo | grep avx2
 
 `Doris` 支持运行和部署在 `x86-64` 架构的服务器平台或 `ARM64` 架构的服务器上。
 
-**开发及测试环境**
+#### 1.2.1 开发及测试环境
 
 | 模块 | CPU | 内存 | 磁盘 | 网络 | 实例数量（最低要求） |
 | -- | -- | -- | -- | -- | -- |
@@ -85,7 +85,7 @@ cat /proc/cpuinfo | grep avx2
     
     * 测试环境也可以仅使用一个 `BE` 进行测试。实际生产环境， `BE` 实例数量直接决定了整体查询延迟。
 
-**生产环境**
+#### 1.2.2 生产环境
 
 | 模块 | CPU | 内存 | 磁盘 | 网络 | 实例数量（最低要求） |
 | -- | -- | -- | -- | -- | -- |
@@ -220,7 +220,7 @@ echo never > /sys/kernel/mm/transparent_hugepage/defrag
 
 ### 3.2 节点数量规划
 
-**FE 节点数量**
+#### 3.2.1 FE 节点数量
 
 `FE` 节点主要负责用户请求的接入、查询解析规划、元数据的管理、节点管理相关工作。
 
@@ -232,7 +232,7 @@ echo never > /sys/kernel/mm/transparent_hugepage/defrag
 
 通常情况下，建议部署 `3` 个 `Follower` 节点。在高并发的场景中，可以通过扩展 `Observer` 节点提高集群的连接数。
 
-**BE 节点数量**
+#### 3.2.2 BE 节点数量
 
 `BE` 节点负责数据的存储与计算。在生产环境中，一般会使用 `3` 副本存储数据，建议部署至少 `3` 个 `BE` 节点。
 
@@ -242,7 +242,7 @@ echo never > /sys/kernel/mm/transparent_hugepage/defrag
 
 ### 4.1 部署 FE Master 节点
 
-**创建元数据路径**
+#### 4.1.1 创建元数据路径
 
 `FE` 元数据通常不超过 `10GB` ，建议与 `BE` 节点数据存储在不同的硬盘上。
 
@@ -256,7 +256,7 @@ mkdir -p <doris_meta_created>
 ln -s <doris_meta_original> <doris_meta_created>
 ```
 
-**修改 FE 配置文件**
+#### 4.1.2 修改 FE 配置文件
 
 `FE` 的配置文件在 `FE` 部署路径下的 `conf` 目录中，启动 `FE` 节点前需要修改 `conf/fe.conf` 。
 
@@ -288,7 +288,7 @@ ln -s <doris_meta_original> <doris_meta_created>
 
     在 `Doris` 中默认表名大小写敏感。如果有对大小写不敏感的需求，需要在集群初始化时进行设置。表名大小写敏感在集群初始化完成后就无法再进行修改。详细参见变量文档中关于 `lower_case_table_names` 的介绍。
 
-**启动 FE 进程**
+#### 4.1.3 启动 FE 进程
 
 通过以下命令可以启动 `FE` 进程
 
@@ -298,7 +298,7 @@ bin/start_fe.sh --daemon
 
 `FE` 进程启动进入后台执行。日志默认存放在 `log/` 目录下。如启动失败，可以通过查看 `log/fe.log` 或者 `log/fe.out` 查看错误信息
 
-**检查 FE 启动状态**
+#### 4.1.4 检查 FE 启动状态
 
 通过 `MySQL Client` 可以链接 `Doris` 集群。初始化用户为 `root` ，密码为空。
 
@@ -318,15 +318,15 @@ mysql -uroot -P<fe_query_port> -h<fe_ip_address>
 
 在生产集群中，建议至少部署 `3` 个 `Follower` 节点。在部署过 `FE Master` 节点后，需要再部署两个 `FE Follower` 节点。
 
-**创建元数据目录**
+#### 4.2.1 创建元数据目录
 
 参考部署 `FE Master` 节点，创建 `doris-meta` 目录
 
-**修改 FE Follower 节点配置文件**
+#### 4.2.2 修改 FE Follower 节点配置文件
 
 参考部署 `FE Master` 节点，修改 `FE` 配置文件。通常情况下，可以直接复制 `FE Master` 节点的配置文件。
 
-**在 Doris 集群中注册新的 FE Follower 节点**
+#### 4.2.3 在 Doris 集群中注册新的 FE Follower 节点
 
 在启动新的 `FE` 节点前，需要先在 `FE` 集群中注册新的 `FE` 节点。
 
@@ -357,7 +357,7 @@ ALTER SYSTEM ADD OBSERVER "<fe_ip_address>:<fe_edit_log_port>"
     
     3. 通常一个 `FE` 节点可以应对 `10-20` 台 `BE` 节点。建议总的 `FE` 节点数量在 `10` 个以下
 
-**启动 FE Follower 节点**
+#### 4.2.4 启动 FE Follower 节点
 
 通过以下命令，可以启动 `FE Follower` 节点，并自动同步元数据。
 
@@ -367,13 +367,13 @@ bin/start_fe.sh --helper <helper_fe_ip>:<fe_edit_log_port> --daemon
 
 其中， `helper_fe_ip` 为当前 `FE` 集群中任一存活的节点。 `--heper` 参数只应用于第一次启动 `FE` 时同步元数据，后续重启 `FE` 的操作不需要指定。
 
-**判断 follower 节点状态**
+#### 4.2.5 判断 follower 节点状态
 
 与判断 `FE master` 节点状态的方式相同，添加注册 `FE follower` 节点后需要通过 `show frontends` 命令查看 `FE` 节点状态。与 `Master` 状态不同， `IsMaster` 的状态应为 `false` 。
 
 ### 4.3 部署 BE
 
-**创建数据目录**
+#### 4.3.1 创建数据目录
 
 `BE` 进程应用于数据的计算与存储。数据目录默认放在 `be/storage` 下。在生产环境中，通常使用独立的硬盘来存储数据，将 `BE` 数据与 `BE` 的部署文件置于不同的硬盘中。 `BE` 支持数据分布在多盘上以更好的利用多块硬盘的 `I/O` 能力。
 
@@ -382,7 +382,7 @@ bin/start_fe.sh --helper <helper_fe_ip>:<fe_edit_log_port> --daemon
 mkdir -p <be_storage_root_path>
 ```
 
-**修改 BE 配置文件**
+#### 4.3.2 修改 BE 配置文件
 
 `BE` 的配置文件在 `BE` 部署路径下的 `conf` 目录中，启动 `FE` 节点前需要修改 `conf/be.conf` 。
 
@@ -399,7 +399,7 @@ mkdir -p <be_storage_root_path>
 
     如需修改 `BE` 的存储路径，可以修改 `storage_root_path` 参数。在多路径之间使用英文分号 `;` 分隔（最后一个目录不要加分号）。
 
-    **冷热数据分级存储**
+    冷热数据分级存储：
 
     `Doris` 支持冷热数据分级存储，将冷数据存储在 `HDD` 或对象存储中，热数据存储在 `SSD` 中。
 
@@ -434,7 +434,7 @@ mkdir -p <be_storage_root_path>
     priority_networks = 10.1.3.0/24
     ```
 
-**在 Doris 中注册 BE 节点**
+#### 4.3.3 在 Doris 中注册 BE 节点
 
 在启动新的 `BE` 节点前，需要先在 `FE` 集群中注册新的 `BE` 节点。
 
@@ -448,7 +448,7 @@ mysql -uroot -P<fe_query_port> -h<fe_ip_address>
 ALTER SYSTEM ADD BACKEND "<be_ip_address>:<be_heartbeat_service_port>"
 ```
 
-**启动 BE 进程**
+#### 4.3.4 启动 BE 进程
 
 通过以下命令可以启动 `BE` 进程
 
@@ -458,7 +458,7 @@ bin/start_be.sh --daemon
 
 `BE` 进程启动进入后台执行。日志默认存放在 `log/` 目录下。如启动失败，可以通过查看 `log/be.log` 或者 `log/be.out` 查看错误信息
 
-**查看 BE 启动状态**
+#### 4.3.5 查看 BE 启动状态
 
 在链接到 `Doris` 集群后，通过 `show backends` 命令查看 `BE` 的状态。
 
@@ -478,7 +478,7 @@ show backends;
 
 ### 4.4 验证集群正确性
 
-**登录数据库**
+#### 4.4.1 登录数据库
 
 通过 `MySQL Client` 登录 `Doris` 集群。
 
@@ -487,7 +487,7 @@ show backends;
 mysql -uroot -P<fe_query_port> -h<fe_ip_address>
 ```
 
-**检查 Doris 安装版本**
+#### 4.4.2 检查 Doris 安装版本
 
 通过 `show frontends` 与 `show backends` 命令可以查看数据库版本情况。
 
@@ -499,7 +499,7 @@ show frontends \G
 show backends \G
 ```
 
-**修改 Doris 集群密码**
+#### 4.4.3 修改 Doris 集群密码
 
 在创建 `Doris` 集群后，系统会自动创建 `root` 用户，并默认密码为空。建议在创建集群后为 `root` 用户重置一个新密码。
 
@@ -516,7 +516,7 @@ select user();
 SET PASSWORD = PASSWORD('doris_new_passwd');
 ```
 
-**创建测试表并插入数据**
+#### 4.4.4 创建测试表并插入数据
 
 在新创建的集群中，可以创建表并插入数据以验证集群正确性。
 
