--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.10 数据库建表最佳实践.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.10 数据库建表最佳实践.md
@@ -36,7 +36,7 @@
 
 * 仅追加新数据的日志或时序数据分析
 
-**最佳实践**
+#### 1.1.1 最佳实践
 
 ```sql
 -- 例如 允许 KEY 重复仅追加新数据的日志数据分析
@@ -81,7 +81,7 @@ DISTRIBUTED BY HASH(sessionid, visitorid) BUCKETS 10;
 
 * 数据报表多维分析
 
-**最佳实践**
+#### 1.2.1 最佳实践
 
 ```sql
 -- 例如 网站流量分析
@@ -106,7 +106,7 @@ DISTRIBUTED BY HASH(siteid) BUCKETS 10;
 
 * 实时增删改同步
 
-**最佳实践**
+#### 1.3.1 最佳实践
 
 ```sql
 -- 例如 订单去重分析
@@ -179,7 +179,7 @@ SELECT * FROM table WHERE age > 0 and age < 51;
 
 从 `2.0.0` 版本开始， `Doris` 支持倒排索引，可以用来进行文本类型的全文检索、普通数值日期类型的等值范围查询，快速从海量数据中过滤出满足条件的行。
 
-**最佳实践**
+#### 2.3.1 最佳实践
 
 ```sql
 -- 创建示例：可以表创建时指定或者创建后新增，如下创建表时指定
@@ -221,7 +221,7 @@ SELECT * FROM table_name WHERE column_name MATCH_ANY | MATCH_ALL 'keyword1 ...';
 
 `Doris` 支持用户对取值区分度比较大的字段添加 `BloomFilter` 索引，适合在基数较高的列上进行等值查询的场景。
 
-**最佳实践**
+#### 2.4.1 最佳实践
 
 ```sql
 -- 创建示例：通过在建表语句的 PROPERTIES 里加上"bloom_filter_columns"="k1,k2,k3"
@@ -267,7 +267,7 @@ PROPERTIES (
 
 从 `2.0.0` 版本开始， `Doris` 为了提升 `LIKE` 的查询性能，增加了 `NGram BloomFilter` 索引。
 
-**最佳实践**
+#### 2.5.1 最佳实践
 
 ```sql
 -- 创建示例：表创建时指定
@@ -301,7 +301,7 @@ DISTRIBUTED BY HASH(`siteid`) BUCKETS 10;
 
 为了加速数据查询， `Doris` 支持用户为某些字段添加 `Bitmap` 索引，适合在基数较低的列上进行等值查询或范围查询的场景。
 
-**最佳实践**
+#### 2.6.1 最佳实践
 
 ```sql
 -- 创建示例：在 bitmap_table 上为 siteid 创建 Bitmap 索引
@@ -384,7 +384,7 @@ USING BITMAP COMMENT 'bitmap_siteid';
 
 建表时除了要注意数据表模型、索引和字段类型的选择还需要注意分区分桶的设置。
 
-**最佳实践**
+### 4.1 最佳实践
 
 ```sql
 -- 以 Unique 模型的 Merge-on-Write 表为例
@@ -474,7 +474,7 @@ show partitions from tbl_unique_merge_on_write_p;
 
         * 如果数据量过大，则不利于副本的迁移、补齐，且会增加 `Schema Change` 或者物化操作失败重试的代价（这些操作失败重试的粒度是 `Tablet` ）。
 
-    4. 5 亿以上的数据必须设置分区分桶策略：
+    4. `5` 亿以上的数据必须设置分区分桶策略：
         
         * `bucket` 设置建议：
             
