--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.4 Tiered Storage/3.4.2 远程存储.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.4 Tiered Storage/3.4.2 远程存储.md
@@ -109,7 +109,7 @@ CREATE RESOURCE "remote_hdfs" PROPERTIES (
 ALTER TABLE create_table_not_have_policy set ("storage_policy" = "test_policy");
 ```
 
-对一个已存在的PARTITION，设置远程存储，将创建好的STORAGE POLICY与PARTITON关联：
+对一个已存在的 `PARTITION` ，设置远程存储，将创建好的 `STORAGE POLICY` 与 `PARTITON` 关联：
 
 ```sql
 ALTER TABLE create_table_partition MODIFY PARTITION (*) SET("storage_policy"="test_policy");
