--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.7 数据划分/3.7.7 常见问题.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.7 数据划分/3.7.7 常见问题.md
@@ -4,7 +4,7 @@
 
     * 语法结构错误。请仔细阅读 `HELP CREATE TABLE;` ，检查相关语法结构。
 
-    * 保留字。当用户自定义名称遇到保留字时，需要用反引号 **``** 引起来。建议所有自定义名称使用这个符号引起来。
+    * 保留字。当用户自定义名称遇到保留字时，需要用反引号 ``` `` ``` 引起来。建议所有自定义名称使用这个符号引起来。
 
     * 中文字符或全角字符。非 `utf8` 编码的中文字符，或隐藏的全角字符（空格，标点等）会导致语法错误。建议使用带有显示不可见字符的文本编辑器进行检查。
 
@@ -26,7 +26,7 @@
 
         * `Too many open files` 。打开的文件句柄数超过了 `Linux` 系统限制。需修改 `Linux` 系统的句柄数限制。
 
-    如果创建数据分片时超时，也可以通过在 `fe.conf` 中设置 `tablet_create_timeout_second=xxx` 以及 `max_create_table_timeout_second=xxx` 来延长超时时间。其中 `tablet_create_timeout_second` 默认是 `1` 秒， `max_create_table_timeout_second` 默认是 `60` 秒，总体的超时时间为 `min(tablet_create_timeout_second * replication_num, max_create_table_timeout_second)` ，具体参数设置可参阅 `FE` 配置项 。
+    如果创建数据分片时超时，也可以通过在 `fe.conf` 中设置 `tablet_create_timeout_second=xxx` 以及 `max_create_table_timeout_second=xxx` 来延长超时时间。其中 `tablet_create_timeout_second` 默认是 `1` 秒， `max_create_table_timeout_second` 默认是 `60` 秒，总体的超时时间为 `min(tablet_create_timeout_second * replication_num, max_create_table_timeout_second)` ，具体参数设置可参阅 `FE` 配置项。
 
 3. 建表命令长时间不返回结果。
 
