--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.8 Schema 变更.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.8 Schema 变更.md
@@ -14,7 +14,7 @@
 
 ## 2 原理介绍
 
-**概览**
+### 2.1 概览
 
 `Schema Change` 的实现分为两个大类：轻量级 `Schema Change` 和重量级 `Schema Change` 。
 
@@ -28,7 +28,7 @@
     | Sort Schema Change | 对数据文件进行整体重写，并进行重排序 | 更改key列的数据类型 |
     | Hard Linked Schema Change | 对数据文件进行重新链接，不需要直接修改数据文件 | 在列的变更中被轻量级Schema Change取代 |
 
-**主要流程**
+### 2.2 主要流程
 
 对于轻量级 `Schema Change` ，只会在 `Alter` 命令发起后修改 `FE` 的相应元数据， `Alter` 命令的返回就代表 `Schema` 变更的结束。
 
@@ -85,7 +85,7 @@ ALTER TABLE table_name ADD COLUMN column_name column_type [KEY | agg_type] [DEFA
 
 ### 3.2 示例
 
-**非聚合模型**
+#### 3.2.1 非聚合模型
 
 建表语句：
 
@@ -122,7 +122,7 @@ PROPERTIES (
     TO example_rollup_index;
     ```
 
-**聚合模型**
+#### 3.2.2 聚合模型
 
 建表语句：
 
