--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.2 导入方式/4.1.2.1 Stream Load.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.2 导入方式/4.1.2.1 Stream Load.md
@@ -46,7 +46,7 @@
 
 ### 3.2 创建导入作业
 
-**导入 CSV 数据**
+#### 3.2.1 导入 CSV 数据
 
 1. 创建导入数据
 
@@ -127,7 +127,7 @@
     +----------+
     ```
 
-**导入 JSON 数据**
+#### 3.2.2 导入 JSON 数据
 
 1. 创建导入数据
 
@@ -242,7 +242,7 @@ curl --location-trusted -u <doris_user>:<doris_password> \
 
 ### 4.2 导入配置参数
 
-**FE 配置**
+#### 4.2.1 FE 配置
 
 1. `stream_load_default_timeout_second`
 
@@ -254,7 +254,7 @@ curl --location-trusted -u <doris_user>:<doris_password> \
 
     参数描述： `Stream Load` 默认的超时时间。导入任务的超时时间（以秒为单位），导入任务在设定的 `timeout` 时间内未完成则会被系统取消，变成 `CANCELLED` 。如果导入的源文件无法在规定时间内完成导入，用户可以在 `Stream Load` 请求中设置单独的超时时间。或者调整 `FE` 的参数 `stream_load_default_timeout_second` 来设置全局的默认超时时间。
 
-**BE 配置**
+#### 4.2.2 BE 配置
 
 1. `streaming_load_max_mb`
 
@@ -350,7 +350,7 @@ curl --location-trusted -u <doris_user>:<doris_password> \
 | CommitAndPublishTimeMs | 向 FE 请求提交并且发布事务所花费的时间，单位毫秒 |
 | ErrorURL | 如果有数据质量问题，通过访问这个 URL 查看具体错误行 |
 
-通过 ErrorURL 可以查看因为数据质量不佳导致的导入失败数据。使用命令 `curl "<ErrorURL>"` 命令直接查看错误数据的信息。
+通过 `ErrorURL` 可以查看因为数据质量不佳导致的导入失败数据。使用命令 `curl "<ErrorURL>"` 命令直接查看错误数据的信息。
 
 ## 5 导入举例
 
@@ -428,7 +428,7 @@ curl --location-trusted -u <doris_user>:<doris_password> \
 
 由于 `Doris` 目前没有内置时区的时间类型，所有 `DATETIME` 相关类型均只表示绝对的时间点，而不包含时区信息，不因 `Doris` 系统时区变化而发生变化。因此，对于带时区数据的导入，我们统一的处理方式为将其转换为特定目标时区下的数据。在 `Doris` 系统中，即 `session variable time_zone` 所代表的时区。
 
-而在导入中，我们的目标时区通过参数 `timezone` 指定，该变量在发生时区转换、运算时区敏感函数时将会替代 session variable `time_zone` 。因此，如果没有特殊情况，在导入事务中应当设定 `timezone` 与当前 `Doris` 集群的 `time_zone` 一致。此时意味着所有带时区的时间数据，均会发生向该时区的转换。
+而在导入中，我们的目标时区通过参数 `timezone` 指定，该变量在发生时区转换、运算时区敏感函数时将会替代 `session variable time_zone` 。因此，如果没有特殊情况，在导入事务中应当设定 `timezone` 与当前 `Doris` 集群的 `time_zone` 一致。此时意味着所有带时区的时间数据，均会发生向该时区的转换。
 
 例如， `Doris` 系统时区为 `"+08:00"` ，导入数据中的时间列包含两条数据，分别为 `"2012-01-01 01:00:00+00:00"` 和 `"2015-12-12 12:12:12-08:00"` ，则我们在导入时通过 `-H "timezone: +08:00"` 指定导入事务的时区后，这两条数据都会向该时区发生转换，从而得到结果 `"2012-01-01 09:00:00"` 和 `"2015-12-13 04:12:12"` 。
 
