--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.4  数据导出/4.4.2 Export.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.4  数据导出/4.4.2 Export.md
@@ -442,7 +442,7 @@ PROPERTIES (
 
 `Export` 任务的底层是执行 `SELECT INTO OUTFILE SQL` 语句。用户发起一个 `Export` 任务后， `Doris` 会根据 `Export` 要导出的表构造出一个或多个 `SELECT INTO OUTFILE` 执行计划，随后将这些 `SELECT INTO OUTFILE` 执行计划提交给 `Doris` 的 `Job Schedule` 任务调度器， `Job Schedule` 任务调度器会自动调度这些任务并执行。
 
-默认情况下， `Export` 任务是单线程执行的。为了提高导出的效率， `Export` 命令可以设置一个 `parallelism` 参数来并发导出数据。设置 `parallelism` 大于 `1` 后， `Export` 任务会使用多个线程并发的去执行 `SELECT INTO OUTFILE` 查询计划。 `parallelism` 参数实际就是指定执行 EXPORT 作业的线程数量。
+默认情况下， `Export` 任务是单线程执行的。为了提高导出的效率， `Export` 命令可以设置一个 `parallelism` 参数来并发导出数据。设置 `parallelism` 大于 `1` 后， `Export` 任务会使用多个线程并发的去执行 `SELECT INTO OUTFILE` 查询计划。 `parallelism` 参数实际就是指定执行 `EXPORT` 作业的线程数量。
 
 一个 `Export` 任务构造一个或多个 `SELECT INTO OUTFILE` 执行计划的具体逻辑是：
 
