--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/6 查询加速/6.1 物化视图/6.1.2 同步物化视图.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/6 查询加速/6.1 物化视图/6.1.2 同步物化视图.md
@@ -2,7 +2,7 @@
 
 ## 1 什么是同步物化视图
 
-同步物化视图是将预先计算（根据定义好的 SELECT 语句）的数据集，存储在 Doris 中的一个特殊的表。Doris 会自动维护同步物化视图的数据，无论是新的导入还是删除操作，都能保证 Base 表和物化视图表的数据同步更新、保持一致后，相关命令才会结束，无需任何额外的人工维护成本。查询时，Doris 会自动匹配到最优的物化视图，并直接从物化视图中读取数据。
+同步物化视图是将预先计算（根据定义好的 `SELECT` 语句）的数据集，存储在 `Doris` 中的一个特殊的表。 `Doris` 会自动维护同步物化视图的数据，无论是新的导入还是删除操作，都能保证 `Base` 表和物化视图表的数据同步更新、保持一致后，相关命令才会结束，无需任何额外的人工维护成本。查询时， `Doris` 会自动匹配到最优的物化视图，并直接从物化视图中读取数据。
 
 ## 2 适用场景
 
@@ -16,23 +16,23 @@
 
 ## 3 局限性
 
-* 同步物化视图只支持针对单个表的 SELECT 语句，支持 WHERE、GROUP BY、ORDER BY 等子句，但不支持 JOIN、HAVING、LIMIT 子句和 LATERAL VIEW。
+* 同步物化视图只支持针对单个表的 `SELECT` 语句，支持 `WHERE` 、 `GROUP BY` 、 `ORDER BY` 等子句，但不支持 `JOIN` 、 `HAVING` 、 `LIMIT` 子句和 `LATERAL VIEW` 。
 
 * 与异步物化视图不同，不能直接查询同步物化视图。
 
-* SELECT 列表中，不能包含自增列，不能包含常量，不能有重复表达式，也不支持窗口函数。
+* `SELECT` 列表中，不能包含自增列，不能包含常量，不能有重复表达式，也不支持窗口函数。
 
-* 如果 SELECT 列表包含聚合函数，则聚合函数必须是根表达式（不支持 `sum(a) + 1` ，支持 `sum(a + 1)` ），且聚合函数之后不能有其他非聚合函数表达式（例如，`SELECT x, sum(a)` 可以，而 `SELECT sum(a), x` 不行）。
+* 如果 `SELECT` 列表包含聚合函数，则聚合函数必须是根表达式（不支持 `sum(a) + 1` ，支持 `sum(a + 1)` ），且聚合函数之后不能有其他非聚合函数表达式（例如， `SELECT x, sum(a)` 可以，而 `SELECT sum(a), x` 不行）。
 
 * 如果删除语句的条件列在物化视图中存在，则不能进行删除操作。如果确实需要删除数据，则需要先将物化视图删除，然后才能删除数据。
 
-* 单表上过多的物化视图会影响导入的效率：导入数据时，物化视图和 Base 表的数据是同步更新的。如果一张表的物化视图表过多，可能会导致导入速度变慢，这就像单次导入需要同时导入多张表的数据一样。
+* 单表上过多的物化视图会影响导入的效率：导入数据时，物化视图和 `Base` 表的数据是同步更新的。如果一张表的物化视图表过多，可能会导致导入速度变慢，这就像单次导入需要同时导入多张表的数据一样。
 
-* 物化视图针对 Unique Key 数据模型时，只能改变列的顺序，不能起到聚合的作用。因此，在 Unique Key 模型上不能通过创建物化视图的方式对数据进行粗粒度的聚合操作。
+* 物化视图针对 `Unique Key` 数据模型时，只能改变列的顺序，不能起到聚合的作用。因此，在 `Unique Key` 模型上不能通过创建物化视图的方式对数据进行粗粒度的聚合操作。
 
 ## 4 使用物化视图
 
-Doris 系统提供了一整套针对物化视图的 DDL 语法，包括创建、查看和删除。下面通过一个示例来展示如何使用物化视图加速聚合计算。假设用户有一张销售记录明细表，该表存储了每个交易的交易 ID、销售员、售卖门店、销售时间以及金额。建表语句和插入数据语句如下：
+`Doris` 系统提供了一整套针对物化视图的 `DDL` 语法，包括创建、查看和删除。下面通过一个示例来展示如何使用物化视图加速聚合计算。假设用户有一张销售记录明细表，该表存储了每个交易的交易 `ID` 、销售员、售卖门店、销售时间以及金额。建表语句和插入数据语句如下：
 
 ```sql
 -- 创建一个 test_db
@@ -82,7 +82,7 @@ show alter table materialized view from test_db;
 +--------+---------------+---------------------+---------------------+---------------+-----------------+----------+---------------+----------+------+----------+---------+
 ```
 
-其中，TableName 指的是物化视图的数据来源表，RollupIndexName 指的是物化视图的名称。比较重要的指标是 State。当创建物化视图任务的 State 变为 FINISHED 时，就说明这个物化视图已经创建成功了。这意味着，在执行查询时有可能自动匹配到这张物化视图。
+其中， `TableName` 指的是物化视图的数据来源表， `RollupIndexName` 指的是物化视图的名称。比较重要的指标是 `State` 。当创建物化视图任务的 `State` 变为 `FINISHED` 时，就说明这个物化视图已经创建成功了。这意味着，在执行查询时有可能自动匹配到这张物化视图。
 
 ### 4.3 取消创建物化视图
 
@@ -141,13 +141,13 @@ show create materialized view store_amt on sales_records;
 
 ### 4.6 查询物化视图
 
-当物化视图创建完成后，用户在查询不同门店的销售量时，Doris 会直接从刚才创建的物化视图 `store_amt` 中读取聚合好的数据，从而提升查询效率。用户的查询依旧指定查询 `sales_records` 表，比如：
+当物化视图创建完成后，用户在查询不同门店的销售量时， `Doris` 会直接从刚才创建的物化视图 `store_amt` 中读取聚合好的数据，从而提升查询效率。用户的查询依旧指定查询 `sales_records` 表，比如：
 
 ```sql
 select store_id, sum(sale_amt) from sales_records group by store_id;
 ```
 
-上面的查询就能自动匹配到store_amt。用户可以通过下面的命令，检验当前查询是否匹配到了合适的物化视图。
+上面的查询就能自动匹配到 `store_amt` 。用户可以通过下面的命令，检验当前查询是否匹配到了合适的物化视图。
 
 ```sql
 explain select store_id, sum(sale_amt) from sales_records group by store_id;
@@ -237,13 +237,13 @@ explain select store_id, sum(sale_amt) from sales_records group by store_id;
 
 上述内容表明，查询成功命中了名为 `store_amt` 的物化视图。值得注意的是，若目标表中无任何数据，则可能不会触发对物化视图的命中。
 
-关于 MATERIALIZATIONS 的详细说明：
+关于 `MATERIALIZATIONS` 的详细说明：
 
-* MaterializedViewRewriteSuccessAndChose：展示被成功选中并用于查询优化的物化视图。
+* `MaterializedViewRewriteSuccessAndChose` ：展示被成功选中并用于查询优化的物化视图。
 
-* MaterializedViewRewriteSuccessButNotChose：展示匹配成功但未被选中的物化视图（优化器会基于物化视图的成本进行最优选择，这些匹配但未被选中的物化视图，表示它们并非最优选择）。
+* `MaterializedViewRewriteSuccessButNotChose` ：展示匹配成功但未被选中的物化视图（优化器会基于物化视图的成本进行最优选择，这些匹配但未被选中的物化视图，表示它们并非最优选择）。
 
-* MaterializedViewRewriteFail：展示未能匹配的物化视图，即原始 SQL 查询与现有物化视图无法匹配，因此无法使用物化视图进行优化。
+* `MaterializedViewRewriteFail` ：展示未能匹配的物化视图，即原始 `SQL` 查询与现有物化视图无法匹配，因此无法使用物化视图进行优化。
 
 ### 4.7 删除物化视图
 
@@ -257,9 +257,9 @@ drop materialized view store_amt on sales_records;
 
 ### 5.1 示例一：加速聚合查询
 
-业务场景：计算广告的 UV（独立访客数）和 PV（页面访问量）。
+业务场景：计算广告的 `UV` （独立访客数）和 `PV` （页面访问量）。
 
-假设用户的原始广告点击数据存储在 Doris 中，那么针对广告 PV 和 UV 的查询就可以通过创建带有 `bitmap_union` 的物化视图来提升查询速度。首先，创建一个存储广告点击数据明细的表，包含每条点击的点击时间、点击的广告、点击的渠道以及点击的用户。原始表创建语句如下：
+假设用户的原始广告点击数据存储在 `Doris` 中，那么针对广告 `PV` 和 `UV` 的查询就可以通过创建带有 `bitmap_union` 的物化视图来提升查询速度。首先，创建一个存储广告点击数据明细的表，包含每条点击的点击时间、点击的广告、点击的渠道以及点击的用户。原始表创建语句如下：
 
 ```sql
 create table advertiser_view_record
@@ -272,7 +272,7 @@ create table advertiser_view_record
 insert into advertiser_view_record values("2020-02-02 02:02:02",'a','a',1), ("2020-02-02 02:02:02",'a','a',2);
 ```
 
-用户想要查询的是广告的 UV 值，也就是需要对相同广告的用户进行精确去重，查询语句一般为：
+用户想要查询的是广告的 `UV` 值，也就是需要对相同广告的用户进行精确去重，查询语句一般为：
 
 ```sql
 select
@@ -285,7 +285,7 @@ group by
     advertiser, channel;
 ```
 
-针对这种求 UV 的场景，可以创建一个带有 `bitmap_union` 的物化视图，以达到预先精确去重的效果。在 Doris 中， `count(distinct)` 聚合的结果和 `bitmap_union_count` 聚合的结果是完全一致的。因此，如果查询中涉及到 `count(distinct)` ，则通过创建带有 `bitmap_union` 聚合的物化视图可以加快查询。根据当前的使用场景，可以创建一个根据广告和渠道分组，对 `user_id` 进行精确去重的物化视图。
+针对这种求 `UV` 的场景，可以创建一个带有 `bitmap_union` 的物化视图，以达到预先精确去重的效果。在 `Doris` 中， `count(distinct)` 聚合的结果和 `bitmap_union_count` 聚合的结果是完全一致的。因此，如果查询中涉及到 `count(distinct)` ，则通过创建带有 `bitmap_union` 聚合的物化视图可以加快查询。根据当前的使用场景，可以创建一个根据广告和渠道分组，对 `user_id` 进行精确去重的物化视图。
 
 ```sql
 create materialized view advertiser_uv as
@@ -299,7 +299,7 @@ group by
     advertiser, channel;
 ```
 
-当物化视图表创建完成后，查询广告 UV 时，Doris 就会自动从刚才创建好的物化视图 `advertiser_uv` 中查询数据。如果执行之前的 SQL 查询：
+当物化视图表创建完成后，查询广告 `UV` 时， `Doris` 就会自动从刚才创建好的物化视图 `advertiser_uv` 中查询数据。如果执行之前的 `SQL` 查询：
 
 ```sql
 select
@@ -412,13 +412,13 @@ group by
 +---------------------------------------------------------------------------------------------------------------------------------------------------------+
 ```
 
-在 `explain` 的结果中，可以看到 `internal.test_db.advertiser_view_record.advertiser_uv chose` 。也就是说，查询会直接扫描物化视图的数据，说明匹配成功。其次，对于 `user_id` 字段求 `count(distinct)` 被改写为求 `bitmap_union_count(to_bitmap)` ，也就是通过 Bitmap 的方式来达到精确去重的效果。
+在 `explain` 的结果中，可以看到 `internal.test_db.advertiser_view_record.advertiser_uv chose` 。也就是说，查询会直接扫描物化视图的数据，说明匹配成功。其次，对于 `user_id` 字段求 `count(distinct)` 被改写为求 `bitmap_union_count(to_bitmap)` ，也就是通过 `Bitmap` 的方式来达到精确去重的效果。
 
 ### 5.2 示例二：匹配不同前缀索引
 
 #### 5.2.1 业务场景：匹配前缀索引
 
-用户的原始表包含三列（k1, k2, k3），其中 k1 和 k2 被设置为前缀索引列。当用户查询条件中包含 `where k1=1 and k2=2` 时，查询可以通过索引进行加速。然而，在某些情况下，用户的过滤条件可能无法匹配到前缀索引，例如 `where k3=3` ，此时无法通过索引来提升查询速度。为了解决这个问题，我们可以创建一个以 k3 作为第一列的物化视图。
+用户的原始表包含三列（ `k1` ， `k2` ， `k3` ），其中 `k1` 和 `k2` 被设置为前缀索引列。当用户查询条件中包含 `where k1=1 and k2=2` 时，查询可以通过索引进行加速。然而，在某些情况下，用户的过滤条件可能无法匹配到前缀索引，例如 `where k3=3` ，此时无法通过索引来提升查询速度。为了解决这个问题，我们可以创建一个以 `k3` 作为第一列的物化视图。
 
 建表语句和插入数据语句如下：
 
@@ -436,13 +436,13 @@ properties("replication_num" = "1");
 insert into test_table values(1,1,1,1),(3,3,3,3);
 ```
 
-创建 k3 为前缀索引的物化视图：
+创建 `k3` 为前缀索引的物化视图：
 
 ```sql
 create materialized view mv_1 as SELECT k3, k2, k1 FROM test_table;
 ```
 
-使用 EXPLAIN 检查查询是否匹配物化视图：
+使用 `EXPLAIN` 检查查询是否匹配物化视图：
 
 ```sql
 explain select k1, k2, k3 from test_table where k3=3;
@@ -494,7 +494,7 @@ explain select k1, k2, k3 from test_table where k3=3;
 +----------------------------------------------------------+
 ```
 
-在 EXPLAIN 的结果中，可以看到 `internal.test_db.test_table.mv_1 chose` ，这表明查询成功命中了物化视图。
+在 `EXPLAIN` 的结果中，可以看到 `internal.test_db.test_table.mv_1 chose` ，这表明查询成功命中了物化视图。
 
 ### 5.3 示例三：预先过滤和表达式计算加速查询
 
