--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/6 查询加速/6.8 查询调优原理与实践/6.8.3 计划调优/6.8.3.6 使用多表物化视图透明改写.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/6 查询加速/6.8 查询调优原理与实践/6.8.3 计划调优/6.8.3.6 使用多表物化视图透明改写.md
@@ -2,7 +2,7 @@
 
 ## 1 工作原理
 
-多表物化视图采用的是基于 SPJG（SELECT-PROJECT-JOIN-GROUP-BY）模式的透明改写算法。该算法能够分析查询 SQL 的结构信息，自动寻找合适的物化视图，并尝试进行透明改写，以利用最优的物化视图来表达查询 SQL。通过使用预计算的物化视图结果，可以显著提高查询性能，并降低计算成本。
+多表物化视图采用的是基于 `SPJG` （ `SELECT-PROJECT-JOIN-GROUP-BY` ）模式的透明改写算法。该算法能够分析查询 `SQL` 的结构信息，自动寻找合适的物化视图，并尝试进行透明改写，以利用最优的物化视图来表达查询 `SQL` 。通过使用预计算的物化视图结果，可以显著提高查询性能，并降低计算成本。
 
 ## 2 调优案例
 
@@ -10,7 +10,7 @@
 
 ### 2.1 创建基础表与数据插入
 
-首先，创建 tpch 数据库并在其中创建 `orders` 和 `lineitem` 两张表，并插入相应的数据。
+首先，创建 `tpch` 数据库并在其中创建 `orders` 和 `lineitem` 两张表，并插入相应的数据。
 
 ```sql
 CREATE DATABASE IF NOT EXISTS tpch;
@@ -118,31 +118,31 @@ REFRESH MATERIALIZED VIEW mv1 PARTITIONS(p_20231017_20231018);
 
 管理物化视图的作业，包括查看作业、暂停定时调度、恢复定时调度以及查看和取消任务。
 
-* 查看物化视图 Job
+* 查看物化视图 `Job`
 
     ```sql
     SELECT * FROM jobs("type"="mv") ORDER BY CreateTime;
     ```
 
-* 暂停物化视图 Job 定时调度
+* 暂停物化视图 `Job` 定时调度
 
     ``` sql
     PAUSE MATERIALIZED VIEW JOB ON mv1;
     ```
 
-* 恢复物化视图 Job 定时调度
+* 恢复物化视图 `Job` 定时调度
 
     ```sql
     RESUME MATERIALIZED VIEW JOB ON mv1;
     ```
 
-* 查看物化视图的 Task
+* 查看物化视图的 `Task`
 
     ```sql
     SELECT * FROM tasks("type"="mv");
     ```
 
-* 取消物化视图的 Task：假设 realTaskId 为 123
+* 取消物化视图的 `Task` ：假设 `realTaskId` 为 `123`
 
     ```sql
     CANCEL MATERIALIZED VIEW TASK 123 ON mv1;
