--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/6 查询加速/6.1 物化视图/6.1.3 异步物化视图/6.1.3.2 功能描述.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/6 查询加速/6.1 物化视图/6.1.3 异步物化视图/6.1.3.2 功能描述.md
@@ -1,16 +1,16 @@
 # 6.1.3.2 功能描述
 
-本文将详细说明物化视图 DDL 和基础运维、元数据查询、权限说明、物化刷新数据湖支持情况、与 OLAP 内表关系、直查、查询改写等功能以及基础命令。
+本文将详细说明物化视图 `DDL` 和基础运维、元数据查询、权限说明、物化刷新数据湖支持情况、与 `OLAP` 内表关系、直查、查询改写等功能以及基础命令。
 
 ## 1 DDL 和基础运维
 
 ### 1.1 物化视图创建
 
-1. 详情参考 CREATE ASYNC MATERIALIZED VIEW
+1. 详情参考 `CREATE ASYNC MATERIALIZED VIEW`
 
 2. 新增属性
 
-    * use_for_rewrite：：标识此物化视图是否参与到透明改写中，如果为 false，不参与到透明改写，默认是 true。数据建模场景中，如果物化视图只是用于直查，物化视图可以设置此属性，从而不参与透明改写，提高查询响应速度。
+    * `use_for_rewrite` ：标识此物化视图是否参与到透明改写中，如果为 `false` ，不参与到透明改写，默认是 `true` 。数据建模场景中，如果物化视图只是用于直查，物化视图可以设置此属性，从而不参与透明改写，提高查询响应速度。
 
 3. 分区物化视图
 
@@ -52,55 +52,55 @@
 
 ### 1.2 物化视图修改
 
-详情参考 ALTER ASYNC MATERIALIZED VIEW
+详情参考 `ALTER ASYNC MATERIALIZED VIEW`
 
 ### 1.3 物化视图删除
 
-详情参考 DROP ASYNC MATERIALIZED VIEW
+详情参考 `DROP ASYNC MATERIALIZED VIEW`
 
 ### 1.4 刷新物化视图
 
-详情参考 REFRESH MATERIALIZED VIEW
+详情参考 `REFRESH MATERIALIZED VIEW`
 
 ### 1.5 暂停物化视图
 
-详情参考 PAUSE MATERIALIZED VIEW
+详情参考 `PAUSE MATERIALIZED VIEW`
 
 ### 1.6 启用物化视图
 
-详情参考 RESUME MATERIALIZED VIEW
+详情参考 `RESUME MATERIALIZED VIEW`
 
 ### 1.7 取消物化视图刷新任务
 
-详情参考 CANCEL MATERIALIZED VIEW TASK
+详情参考 `CANCEL MATERIALIZED VIEW TASK`
 
 ## 2 元数据查询
 
-* 查询物化视图信息：MV_INFOS
+* 查询物化视图信息： `MV_INFOS`
 
-* 查询 TASK 信息：TASKS
+* 查询 `TASK` 信息： `TASKS`
 
-* 查询物化视图对应的 JOB 信息：JOBS
+* 查询物化视图对应的 `JOB` 信息： `JOBS`
 
-* 查询物化视图的分区信息：SHOW PARTITIONS
+* 查询物化视图的分区信息： `SHOW PARTITIONS`
 
-* 查看物化视图表结构：DESCRIBE
+* 查看物化视图表结构： `DESCRIBE`
 
-* 查看物化视图创建语句：SHOW CREATE MATERIALIZED VIEW
+* 查看物化视图创建语句： `SHOW CREATE MATERIALIZED VIEW`
 
 ## 3 权限说明
 
-* 创建物化视图：需要具有有物化视图的创建权限（与建表权限相同）以及创建物化视图查询语句的查询权限（与 SELECT 权限相同）。
+* 创建物化视图：需要具有有物化视图的创建权限（与建表权限相同）以及创建物化视图查询语句的查询权限（与 `SELECT` 权限相同）。
 
 * 删除物化视图：需要具有物化视图的删除权限（与删除表权限相同）。
 
 * 修改物化视图：需要具有物化视图的修改权限（与修改表权限相同）。
 
-* 暂停/恢复/取消/刷新物化视图：需要具有物化视图的创建权限。
+* 暂停、恢复、取消、刷新物化视图：需要具有物化视图的创建权限。
 
 ## 4 物化刷新数据湖支持情况
 
-对于物化刷新数据湖的支持情况，不同类型的表和 Catalog 有不同的支持程度：
+对于物化刷新数据湖的支持情况，不同类型的表和 `Catalog` 有不同的支持程度：
 
 | 表类型 | Catalog 类型 | 全量刷新 | 分区刷新 | 触发刷新 |
 | -- |  -- | -- | -- | -- |
@@ -116,19 +116,19 @@
 
 !!! tip
 
-    自 2.1.4 版本起，物化视图支持 Duplicate 模型
+    自 `2.1.4` 版本起，物化视图支持 `Duplicate` 模型
 
-物化视图的底层实现是一个 Duplicate 模型的 OLAP 表。这意味着，理论上物化视图支持 Duplicate 模型的所有功能。然而，为了确保物化视图能够正常且高效地刷新数据，对其功能进行了一些限制：
+物化视图的底层实现是一个 `Duplicate` 模型的 `OLAP` 表。这意味着，理论上物化视图支持 `Duplicate` 模型的所有功能。然而，为了确保物化视图能够正常且高效地刷新数据，对其功能进行了一些限制：
 
 1. 物化视图的分区是基于其基表自动创建和维护的，因此用户不能对物化视图进行分区操作。
 
-2. 由于物化视图背后有相关的作业（JOB）需要处理，所以不能使用删除表（DELETE TABLE）或重命名表（RENAME TABLE）的命令来操作物化视图。相反，需要使用物化视图自身的命令来进行这些操作。
+2. 由于物化视图背后有相关的作业（ `JOB` ）需要处理，所以不能使用删除表（ `DELETE TABLE` ）或重命名表（ `RENAME TABLE` ）的命令来操作物化视图。相反，需要使用物化视图自身的命令来进行这些操作。
 
 3. 物化视图的列数据类型是根据查询语句推导出来的，因此这些数据类型不能被修改。否则，可能会导致物化视图的刷新任务失败。
 
-4. 物化视图具有一些 Duplicate 表没有的属性（property），这些属性需要通过物化视图的命令进行修改。而其他公用的属性则需要使用 ALTER TABLE 命令进行修改。
+4. 物化视图具有一些 `Duplicate` 表没有的属性（ `property` ），这些属性需要通过物化视图的命令进行修改。而其他公用的属性则需要使用 `ALTER TABLE` 命令进行修改。
 
-5. DESC、SHOW PARTITIONS 等命令同样适用于物化视图，可以用于查看物化视图的描述信息和分区信息。
+5. `DESC` 、 `SHOW PARTITIONS` 等命令同样适用于物化视图，可以用于查看物化视图的描述信息和分区信息。
 
 6. 物化视图支持创建索引。
 
@@ -228,7 +228,7 @@ CREATE TABLE IF NOT EXISTS orders  (
     ON l_orderkey = o_orderkey;
     ```
 
-    详情可参考 CREATE-ASYNC-MATERIALIZED-VIEW
+    详情可参考 `CREATE-ASYNC-MATERIALIZED-VIEW`
 
 2. 查询语句：
 
@@ -256,7 +256,7 @@ CREATE TABLE IF NOT EXISTS orders  (
 
 2. 当查询的表达式不完全包含物化视图的表达式时：
 
-    查询的条件可以推导出物化视图的条件时（常见的是比较和范围表达式，如 `>、<、=、in` 等），也可以进行条件补偿。补偿结果就是查询条件本身。
+    查询的条件可以推导出物化视图的条件时（常见的是比较和范围表达式，如 `>` 、 `<` 、 `=` 、 `in` 等），也可以进行条件补偿。补偿结果就是查询条件本身。
 
     例如，查询是 `a > 5 and b = 10` ，物化视图是 `a > 1 and b > 8` ，可见物化的条件包含了查询的条件，查询的条件可以推导出物化视图的条件，这样也可以进行补偿，补偿结果就是 `a > 5 and b = 10` 。
 
@@ -268,25 +268,25 @@ CREATE TABLE IF NOT EXISTS orders  (
 
 ### 7.2 JOIN 改写
 
-JOIN 改写指的是查询和物化使用的表相同，可以在物化视图和查询的 JOIN 输入或者 JOIN 的外层写 `where` ，优化器对此模式的查询会尝试进行透明改写。
+`JOIN` 改写指的是查询和物化使用的表相同，可以在物化视图和查询的 `JOIN` 输入或者 `JOIN` 的外层写 `where` ，优化器对此模式的查询会尝试进行透明改写。
 
-支持多表 JOIN，支持的 JOIN 类型为：
+支持多表 `JOIN` ，支持的 `JOIN` 类型为：
 
-* INNER JOIN
+* `INNER JOIN`
 
-* LEFT OUTER JOIN
+* `LEFT OUTER JOIN`
 
-* RIGHT OUTER JOIN
+* `RIGHT OUTER JOIN`
 
-* FULL OUTER JOIN
+* `FULL OUTER JOIN`
 
-* LEFT SEMI JOIN
+* `LEFT SEMI JOIN`
 
-* RIGHT SEMI JOIN
+* `RIGHT SEMI JOIN`
 
-* LEFT ANTI JOIN
+* `LEFT ANTI JOIN`
 
-* RIGHT ANTI JOIN
+* `RIGHT ANTI JOIN`
 
 举例如下：
 
@@ -321,7 +321,7 @@ JOIN 改写指的是查询和物化使用的表相同，可以在物化视图和
 
 ### 7.3 JOIN 衍生
 
-当查询和物化视图的 JOIN 类型不一致时，如果物化视图能够提供查询所需的所有数据，那么通过在 JOIN 的外部补偿谓词，也可以进行透明改写。
+当查询和物化视图的 `JOIN` 类型不一致时，如果物化视图能够提供查询所需的所有数据，那么通过在 `JOIN` 的外部补偿谓词，也可以进行透明改写。
 
 举例如下：
 
@@ -369,11 +369,11 @@ JOIN 改写指的是查询和物化使用的表相同，可以在物化视图和
 
 ### 7.4 聚合改写
 
-当查询和物化视图定义中的 group 维度一致时，如果物化视图使用的 group by 维度和查询的 group by 维度相同，并且查询使用的聚合函数可以使用物化视图的聚合函数来表示，那么可以进行透明改写。
+当查询和物化视图定义中的 `group` 维度一致时，如果物化视图使用的 `group by` 维度和查询的 `group by` 维度相同，并且查询使用的聚合函数可以使用物化视图的聚合函数来表示，那么可以进行透明改写。
 
 举例如下：
 
-如下查询可以进行透明改写，因为查询和物化视图使用的聚合维度一致，可以使用物化视图 o_shippriority 字段进行过滤结果。查询中的 group by 维度和聚合函数可以使用物化视图的 group by 维度和聚合函数来改写。
+如下查询可以进行透明改写，因为查询和物化视图使用的聚合维度一致，可以使用物化视图 `o_shippriority` 字段进行过滤结果。查询中的 `group by` 维度和聚合函数可以使用物化视图的 `group by` 维度和聚合函数来改写。
 
 1. 物化视图定义
 
@@ -480,7 +480,7 @@ JOIN 改写指的是查询和物化使用的表相同，可以在物化视图和
 
 ### 7.6 多维聚合改写
 
-支持多维聚合的透明改写，即如果物化视图中没有使用 `GROUPING SETS` , `CUBE` , `ROLLUP` ，而查询中有多维聚合，并且物化视图 `group by` 后的字段包含查询中多维聚合的所有字段，那么也可以进行透明改写。
+支持多维聚合的透明改写，即如果物化视图中没有使用 `GROUPING SETS` ， `CUBE` ， `ROLLUP` ，而查询中有多维聚合，并且物化视图 `group by` 后的字段包含查询中多维聚合的所有字段，那么也可以进行透明改写。
 
 举例如下：
 
@@ -585,7 +585,7 @@ JOIN 改写指的是查询和物化使用的表相同，可以在物化视图和
 
 ### 7.8 嵌套物化视图改写
 
-物化视图的定义 SQL 可以使用物化视图，此物化视图称为嵌套物化视图。嵌套的层数理论上没有限制，此物化视图既可以直查，也可以进行透明改写。嵌套物化视图同样可以参与透明改写。
+物化视图的定义 `SQL` 可以使用物化视图，此物化视图称为嵌套物化视图。嵌套的层数理论上没有限制，此物化视图既可以直查，也可以进行透明改写。嵌套物化视图同样可以参与透明改写。
 
 举例如下：
 
@@ -642,7 +642,7 @@ JOIN 改写指的是查询和物化使用的表相同，可以在物化视图和
 
     !!! warning
 
-        1. 嵌套物化视图的层数越多，透明改写的耗时会相应增加。建议嵌套物化视图层数不要超过 3 层。
+        1. 嵌套物化视图的层数越多，透明改写的耗时会相应增加。建议嵌套物化视图层数不要超过 `3` 层。
 
         2. 嵌套物化视图透明改写默认关闭，开启方式见下面的开关设置。
 
@@ -675,11 +675,11 @@ JOIN 改写指的是查询和物化使用的表相同，可以在物化视图和
     |   FailSummary: The columns used by query are not in view, View struct info is invalid
     ```
 
-    * MaterializedViewRewriteSuccessAndChose：表示透明改写成功，并且 CBO（Cost-Based Optimizer）选择的物化视图名称列表。
+    * `MaterializedViewRewriteSuccessAndChose` ：表示透明改写成功，并且 `CBO` （ `Cost-Based Optimizer` ）选择的物化视图名称列表。
 
-    * MaterializedViewRewriteSuccessButNotChose：表示透明改写成功，但是最终 CBO 没有选择的物化视图名称列表。
+    * `MaterializedViewRewriteSuccessButNotChose` ：表示透明改写成功，但是最终 `CBO` 没有选择的物化视图名称列表。
 
-    * MaterializedViewRewriteFail：列举透明改写失败的情况及原因摘要。
+    * `MaterializedViewRewriteFail` ：列举透明改写失败的情况及原因摘要。
 
 2. 如果想了解物化视图的候选、改写以及最终选择情况的详细过程信息，可以执行如下语句：
 
