--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/6 查询加速/6.1 物化视图/6.1.3 异步物化视图/6.1.3.4 常见问题.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/6 查询加速/6.1 物化视图/6.1.3 异步物化视图/6.1.3.4 常见问题.md
@@ -4,39 +4,39 @@
 
 ### 1.1 Q1：物化视图是如何判断需要刷新哪些分区的？
 
-Doris 内部会计算物化视图和基表的分区对应关系，并且记录上次刷新成功后物化视图使用的基表分区版本。例如，物化视图 mv1 由基表 t1 和 t2 创建，并且依赖 t1 进行分区。
+`Doris` 内部会计算物化视图和基表的分区对应关系，并且记录上次刷新成功后物化视图使用的基表分区版本。例如，物化视图 `mv1` 由基表 `t1` 和 `t2` 创建，并且依赖 `t1` 进行分区。
 
-假设 mv1 的分区 p202003 对应基表 t1 的分区 p20200301 和 p20200302，那么刷新 p202003 之后，会记录分区 p20200301、p20200302，以及表 t2 的当前版本。
+假设 `mv1` 的分区 `p202003` 对应基表 `t1` 的分区 `p20200301` 和 `p20200302` ，那么刷新 `p202003` 之后，会记录分区 `p20200301` 、 `p20200302` ，以及表 `t2` 的当前版本。
 
-下次刷新时，会判断 p20200301、p20200302 以及 t2 的版本是否发生变化。如果其中之一发生了变化，就代表 p202003 需要刷新。
+下次刷新时，会判断 `p20200301` 、 `p20200302` 以及 `t2` 的版本是否发生变化。如果其中之一发生了变化，就代表 `p202003` 需要刷新。
 
-当然，如果业务上能接受 t2 的变化而不触发 mv1 的刷新，可以通过物化视图的属性 `excluded_trigger_tables` 来设置。
+当然，如果业务上能接受 `t2` 的变化而不触发 `mv1` 的刷新，可以通过物化视图的属性 `excluded_trigger_tables` 来设置。
 
 ### 1.2 Q2：物化视图占用资源过多，影响其他业务怎么办？
 
-可以通过物化视图的属性指定 workload_group 来控制物化视图刷新任务的资源。
+可以通过物化视图的属性指定 `workload_group` 来控制物化视图刷新任务的资源。
 
 使用时需要注意，如果内存设置的太小，单个分区刷新又需要的内存较多，任务会刷新失败。需要根据业务情况进行权衡。
 
 ### 1.3 Q3：能基于物化视图创建新的物化视图吗？
 
-能。从 Doris 2.1.3 版本开始支持。但是，在刷新数据时，每个物化视图都是采用单独的刷新逻辑。例如，如果 mv2 是基于 mv1 创建的，而 mv1 又是基于 t1 创建的，那么在刷新 mv2 时，不会考虑 mv1 与 t1 之间的数据是否同步。
+能。从 `Doris 2.1.3` 版本开始支持。但是，在刷新数据时，每个物化视图都是采用单独的刷新逻辑。例如，如果 `mv2` 是基于 `mv1` 创建的，而 `mv1` 又是基于 `t1` 创建的，那么在刷新 `mv2` 时，不会考虑 `mv1` 与 `t1` 之间的数据是否同步。
 
 ### 1.4 Q4：Doris 都支持哪些外表？
 
-Doris 支持的所有外表都能用于创建物化视图，但是目前仅有 Hive 支持分区刷新，后续会陆续支持其他类型。
+`Doris` 支持的所有外表都能用于创建物化视图，但是目前仅有 `Hive` 支持分区刷新，后续会陆续支持其他类型。
 
 ### 1.5 Q5：物化视图显示和 Hive 数据一致，但是实际上不一致
 
-物化视图仅能保证其数据与通过 Catalog 查询的结果一致。由于 Catalog 包含一定的元数据和数据缓存，因此，如果想让物化视图与 Hive 中的数据保持一致，需要通过 Refresh Catalog 等方式，确保 Catalog 中的数据与 Hive 中的数据一致。
+物化视图仅能保证其数据与通过 `Catalog` 查询的结果一致。由于 `Catalog` 包含一定的元数据和数据缓存，因此，如果想让物化视图与 `Hive` 中的数据保持一致，需要通过 `Refresh Catalog` 等方式，确保 `Catalog` 中的数据与 `Hive` 中的数据一致。
 
 ### 1.6 Q6：物化视图支持 Schema Change 吗？
 
-不支持修改，因为物化视图的列属性是根据物化视图定义的 SQL 推导出来的。目前不支持显式地自定义修改。
+不支持修改，因为物化视图的列属性是根据物化视图定义的 `SQL` 推导出来的。目前不支持显式地自定义修改。
 
 ### 1.7 Q7：物化视图使用的基表允许 Schema Change 吗？
 
-允许。但是变更之后，使用到该基表的物化视图的状态会从 NORMAL 变为 SCHEMA_CHANGE，此时物化视图将不能被用来透明改写，但是不影响直接查询物化视图。如果物化视图下次刷新任务成功，那么状态会由 SCHEMA_CHANGE 变回 NORMAL。
+允许。但是变更之后，使用到该基表的物化视图的状态会从 `NORMAL` 变为 `SCHEMA_CHANGE` ，此时物化视图将不能被用来透明改写，但是不影响直接查询物化视图。如果物化视图下次刷新任务成功，那么状态会由 `SCHEMA_CHANGE` 变回 `NORMAL` 。
 
 ### 1.8 Q8：主键模型的表能用来创建物化视图吗？
 
@@ -62,11 +62,11 @@ Doris 支持的所有外表都能用于创建物化视图，但是目前仅有 H
 Unable to find a suitable base table for partitioning
 ```
 
-出现该报错通常指的是物化视图的 SQL 定义和物化视图分区字段的选择，导致不能分区增量更新，所以创建分区物化视图会报错。
+出现该报错通常指的是物化视图的 `SQL` 定义和物化视图分区字段的选择，导致不能分区增量更新，所以创建分区物化视图会报错。
 
 * 物化视图想要分区增量更新，需要满足以下要求，详情见物化视图刷新模式
 
-* 最新的代码可以提示分区构建失败的原因，原因摘要和说明见附录 2
+* 最新的代码可以提示分区构建失败的原因，原因摘要和说明见附录 `2`
 
 举例如下：
 
@@ -155,7 +155,7 @@ BUILD IMMEDIATE REFRESH AUTO ON MANUAL
     SET en`able_nereids_planner = true;
     ```
 
-2. 可能是构建物化的语句使用的 关键词写错或者物化定义 SQL 语法有问题，可以检查下物化定义 SQL 和创建物化语句是否正确。
+2. 可能是构建物化的语句使用的关键词写错或者物化定义 `SQL` 语法有问题，可以检查下物化定义 `SQL` 和创建物化语句是否正确。
 
 ## 2 查询和透明改写
 
@@ -186,15 +186,15 @@ LEFT OUTER JOIN orders on l_orderkey = o_orderkey
 GROUP BY l_shipdate, l_orderkey, O_ORDERDATE;
 ```
 
-* 物化视图的命中信息在 plan 最后。
+* 物化视图的命中信息在 `plan` 最后。
 
-* MaterializedViewRewriteSuccessAndChose：表示透明改写成功，并且 CBO 选择的物化视图名称列表。-
+* `MaterializedViewRewriteSuccessAndChose` ：表示透明改写成功，并且 `CBO` 选择的物化视图名称列表。
 
-* MaterializedViewRewriteSuccessButNotChose：表示透明改写成功，但是最终 CBO 没有选择的物化视图名称列表，没有选择意味着执行计划不会使用物化视图。”
+* `MaterializedViewRewriteSuccessButNotChose` ：表示透明改写成功，但是最终 `CBO` 没有选择的物化视图名称列表，没有选择意味着执行计划不会使用物化视图。”
 
-* MaterializedViewRewriteFail：表示列举透明改写失败及原因摘要。
+* `MaterializedViewRewriteFail` ：表示列举透明改写失败及原因摘要。
 
-如果 explain 最后没有出现 `MaterializedView` 等信息，那么意味着此物化视图状态不可用，因此不能参与透明改写。（关于什么情况下会导致物化视图状态不可用，可详细参考使用与实践 - 查看物化视图状态）。
+如果 `explain` 最后没有出现 `MaterializedView` 等信息，那么意味着此物化视图状态不可用，因此不能参与透明改写。（关于什么情况下会导致物化视图状态不可用，可详细参考使用与实践的查看物化视图状态）。
 
 举例如下：
 
@@ -211,7 +211,7 @@ GROUP BY l_shipdate, l_orderkey, O_ORDERDATE;
 
 ### 2.2 Q2：物化视图没有命中的原因是什么？
 
-首先，需要确认物化视图是否命中，需要执行如下 SQL，详细见查询和透明改写 - 问题 1
+首先，需要确认物化视图是否命中，需要执行如下 `SQL` ，详细见查询和透明改写的问题 `1`
 
 ```sql
 explain
@@ -220,19 +220,19 @@ your_query_sql;
 
 如果未命中，可能是存在以下几个问题：
 
-* 在 Doris 2.1.3 之前的版本中，物化视图透明改写功能是默认关闭的。需要打开对应的开关，才能实现透明改写。具体的开关值，请参见异步物化视图相关开关。
+* 在 `Doris 2.1.3` 之前的版本中，物化视图透明改写功能是默认关闭的。需要打开对应的开关，才能实现透明改写。具体的开关值，请参见异步物化视图相关开关。
 
 * 物化视图可能处于不可用状态，从而导致透明改写无法命中。要查看物化视图的构建状态，请参见查看物化视图状态。
 
-* 若经过前两步的检查后，物化视图仍然无法命中，那么可能是物化视图的定义 SQL 和查询 SQL 不在当前物化视图改写能力的范围内。详情请参考 物化视图透明改写能力。
+* 若经过前两步的检查后，物化视图仍然无法命中，那么可能是物化视图的定义 `SQL` 和查询 `SQL` 不在当前物化视图改写能力的范围内。详情请参考物化视图透明改写能力。
 
-* 对于失败命中的详细信息和说明，请查阅附录 1。
+* 对于失败命中的详细信息和说明，请查阅附录 `1` 。
 
 以下是物化视图透明改写失败的示例：
 
-用例 1：
+用例 `1` ：
 
-创建物化视图的 SQL 如下：
+创建物化视图的 `SQL` 如下：
 
 ```sql
 CREATE MATERIALIZED VIEW mv11
@@ -257,7 +257,7 @@ LEFT OUTER JOIN lineitem on l_orderkey = o_orderkey
 GROUP BY l_shipdate, l_linestatus, O_ORDERDATE;
 ```
 
-Explain 显示的信息如下：
+`Explain` 显示的信息如下：
 
 ```sql
 | MaterializedView                                                                                          |
@@ -270,11 +270,11 @@ Explain 显示的信息如下：
 |   FailSummary: View struct info is invalid, The graph logic between query and view is not consistent      |
 ```
 
-在执行结果中，可以看到 `MaterializedViewRewriteFail` 有失败的摘要信息，其中 `The graph logic between query and view is not consistent` 表示查询和物化视图的 Join 逻辑不一致，即查询和物化视图的 Join 类型或 Join 的表不同。
+在执行结果中，可以看到 `MaterializedViewRewriteFail` 有失败的摘要信息，其中 `The graph logic between query and view is not consistent` 表示查询和物化视图的 `Join` 逻辑不一致，即查询和物化视图的 `Join` 类型或 `Join` 的表不同。
 
-在上述示例中，查询和物化视图 Join 的表顺序不一致，因此会报告此错误。对于透明改写失败的摘要信息和说明，请参见附录 1。
+在上述示例中，查询和物化视图 `Join` 的表顺序不一致，因此会报告此错误。对于透明改写失败的摘要信息和说明，请参见附录 `1` 。
 
-用例 2：
+用例 `2` ：
 
 执行查询如下：
 
@@ -286,7 +286,7 @@ LEFT OUTER JOIN orders on l_orderkey = o_orderkey
 GROUP BY l_shipdate, l_linestatus, O_ORDERDATE;
 ```
 
-Explain 显示的信息如下：
+`Explain` 显示的信息如下：
 
 ```sql
 | MaterializedView                                                                                                          |
@@ -305,9 +305,9 @@ Explain 显示的信息如下：
 
 不可用，指代的是“物化视图不能用于透明改写”的简称，而物化视图仍然可以直接查询。
 
-* 对于全量物化视图，如果使用的基表数据发生变更或者发生 Schema Change，会导致物化视图不可用。
+* 对于全量物化视图，如果使用的基表数据发生变更或者发生 `Schema Change` ，会导致物化视图不可用。
 
-* 对于分区物化视图，基表数据变更会导致对应的分区不可用。而基表的 Schema Change 则会导致整个物化视图不可用。
+* 对于分区物化视图，基表数据变更会导致对应的分区不可用。而基表的 `Schema Change` 则会导致整个物化视图不可用。
 
 目前，物化视图刷新失败也会导致其不可用。但后续会进行优化，即使刷新失败，已存在的物化视图仍然可用于透明改写。
 
@@ -321,19 +321,19 @@ Explain 显示的信息如下：
 
 异步物化视图的数据与基表之间存在一定的时延。
 
-1. 对于内表以及能够感知数据变化的外表（如 Hive）：当基表数据发生变更时，物化视图是否可用取决于 `grace_period` 的阈值。
+1. 对于内表以及能够感知数据变化的外表（如 `Hive` ）：当基表数据发生变更时，物化视图是否可用取决于 `grace_period` 的阈值。
 
     `grace_period` 是指允许物化视图与所用基表数据不一致的时间段。例如：
 
-    * 如果 `grace_period` 设置为 0，则意味着要求物化视图与基表数据保持一致，此时物化视图才可用于透明改写；对于外表（除 Hive 外），由于无法感知数据变更，因此无论外表的数据是否为最新，使用了外表的物化视图都可以用于透明改写（但数据可能会不一致）。
+    * 如果 `grace_period` 设置为 `0` ，则意味着要求物化视图与基表数据保持一致，此时物化视图才可用于透明改写；对于外表（除 `Hive` 外），由于无法感知数据变更，因此无论外表的数据是否为最新，使用了外表的物化视图都可以用于透明改写（但数据可能会不一致）。
 
-    * 如果 `grace_period` 设置为 10 秒，则意味着允许物化视图与基表数据有最多 10 秒的延迟。如果物化视图的数据与基表数据的延迟在 10 秒内，那么此物化视图仍然可以用于透明改写。
+    * 如果 `grace_period` 设置为 `10` 秒，则意味着允许物化视图与基表数据有最多 `10` 秒的延迟。如果物化视图的数据与基表数据的延迟在 `10` 秒内，那么此物化视图仍然可以用于透明改写。
 
 2. 对于分区物化视图，如果部分分区失效，存在以下两种情况：
 
     * 如果查询没有使用失效的分区数据，那么此物化视图仍然可用。
 
-    * 如果查询使用了失效分区的数据，并且数据时效在 `grace_period` 范围内，那么此物化视图仍然可用。如果物化视图数据时效超出 `grace_period` 范围，可以通过联合原表和物化视图来响应查询。此时需要开启允许联合改写开关 `enable_materialized_view_union_rewrite` （自 2.1.5 版本起，该开关默认开启。）
+    * 如果查询使用了失效分区的数据，并且数据时效在 `grace_period` 范围内，那么此物化视图仍然可用。如果物化视图数据时效超出 `grace_period` 范围，可以通过联合原表和物化视图来响应查询。此时需要开启允许联合改写开关 `enable_materialized_view_union_rewrite` （自 `2.1.5` 版本起，该开关默认开启。）
 
 ## 3 附录
 
@@ -385,7 +385,7 @@ Explain 显示的信息如下：
 
 * 第一步需要计算物化视图的分区字段是否可以和基表的分区映射。
 
-* 第二步是计算具体的映射关系，看分区是 1:1 还是 1:n。
+* 第二步是计算具体的映射关系，看分区是 `1:1` 还是 `1:n` 。
 
 | 摘要信息 | 说明 |
 | -- | -- |
