--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/6 查询加速/6.8 查询调优原理与实践/6.8.3 计划调优/6.8.3.10 使用 Hint 控制代价改写.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/6 查询加速/6.8 查询调优原理与实践/6.8.3 计划调优/6.8.3.10 使用 Hint 控制代价改写.md
@@ -2,35 +2,35 @@
 
 ## 1 工作原理
 
-查询优化器在生成执行计划的过程中，会应用一系列规则。这些规则主要分为两类：基于规则的优化 (Rule-Based Optimizer 即 RBO) 和基于代价的优化 (Cost-Based Optimizer 即 CBO) 。
+查询优化器在生成执行计划的过程中，会应用一系列规则。这些规则主要分为两类：基于规则的优化（ `Rule-Based Optimizer` 即 `RBO` ）和基于代价的优化（ `Cost-Based Optimizer` 即 `CBO` ）。
 
-1. RBO：此类优化通过应用一系列预定义的启发式规则来改进查询计划，而不考虑具体的数据统计信息。例如，谓词下推、投影下推等策略均属于此类。
+1. `RBO` ：此类优化通过应用一系列预定义的启发式规则来改进查询计划，而不考虑具体的数据统计信息。例如，谓词下推、投影下推等策略均属于此类。
 
-2. CBO：此类优化则利用数据统计信息来估算不同执行计划的代价，并选择代价最小的计划进行执行。这包括访问路径的选择、连接算法的选择等。
+2. `CBO` ：此类优化则利用数据统计信息来估算不同执行计划的代价，并选择代价最小的计划进行执行。这包括访问路径的选择、连接算法的选择等。
 
-在某些情况下，数据库管理员或开发人员可能需要对查询优化过程进行更为精细的控制。基于此，本文档将介绍如何使用查询 Hint 来管理 CBO 规则。
+在某些情况下，数据库管理员或开发人员可能需要对查询优化过程进行更为精细的控制。基于此，本文档将介绍如何使用查询 `Hint` 来管理 `CBO` 规则。
 
-CBO 规则控制 Hint 的基本语法如下所示：
+`CBO` 规则控制 `Hint` 的基本语法如下所示：
 
 ```sql
 SELECT /*+ USE_CBO_RULE(rule1, rule2, ...)*/ ...
 ```
 
-此 Hint 应紧跟在 SELECT 关键字之后，并在括号内指定要启用的规则名称（注：规则名称不区分大小写）。
+此 `Hint` 应紧跟在 `SELECT` 关键字之后，并在括号内指定要启用的规则名称（注：规则名称不区分大小写）。
 
-在优化器中，以下 CBO 规则默认处于禁用状态，需要通过 `USE_CBO_RULE hint` 来显式启用：
+在优化器中，以下 `CBO` 规则默认处于禁用状态，需要通过 `USE_CBO_RULE hint` 来显式启用：
 
-1. PUSH_DOWN_AGG_THROUGH_JOIN
+1. `PUSH_DOWN_AGG_THROUGH_JOIN`
 
-2. PUSH_DOWN_AGG_THROUGH_JOIN_ONE_SIDE
+2. `PUSH_DOWN_AGG_THROUGH_JOIN_ONE_SIDE`
 
-3. PUSH_DOWN_DISTINCT_THROUGH_JOIN
+3. `PUSH_DOWN_DISTINCT_THROUGH_JOIN`
 
-这些规则主要涉及聚合操作和 JOIN 操作的优化。具体的优化逻辑如下：
+这些规则主要涉及聚合操作和 `JOIN` 操作的优化。具体的优化逻辑如下：
 
 1. 系统首先会检查查询中是否存在 `USE_CBO_RULE hint` 。
 
-2. 如果存在该 Hint，系统会遍历所有指定的规则。
+2. 如果存在该 `Hint` ，系统会遍历所有指定的规则。
 
 3. 对于每个规则，系统会检查其是否在白名单中。若在白名单中，则该规则将被启用。
 
@@ -61,7 +61,7 @@ GROUP BY
 
 最佳实践：
 
-1. 谨慎使用 CBO 规则 `hint` 。在大多数情况下，优化器能够做出良好的决策。
+1. 谨慎使用 `CBO` 规则 `hint` 。在大多数情况下，优化器能够做出良好的决策。
 
 2. 在应用 `hint` 之前，应先分析查询性能并识别出瓶颈所在。
 
